#9 Updated NSL* classes and removed blank strings

--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -399,7 +399,7 @@ items:
     parameters:
     - id: url
       type: CRMScript.Global.String
-      description: The url to open. http://...
+      description: The URL to open. http://...
     return:
       type: CRMScript.NetServer.NSStream
   example: 
