--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -1393,7 +1393,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentEntity.SetType(Integer)
   type: Method
   summary: ""
-  remarks: "\n\n"
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
