--- a/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSEntityName.GetTableDescription()
   fullName: CRMScript.NetServer.NSEntityName.GetTableDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTableDescription()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSEntityName.GetTableName()
   fullName: CRMScript.NetServer.NSEntityName.GetTableName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTableName()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSEntityName.SetTableDescription(String)
   fullName: CRMScript.NetServer.NSEntityName.SetTableDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTableDescription(String tableDescription)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSEntityName.SetTableName(String)
   fullName: CRMScript.NetServer.NSEntityName.SetTableName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTableName(String tableName)
