--- a/docs/api-reference/CRMScript.NetServer.NSEventData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEventData.yml
@@ -54,7 +54,7 @@ items:
   nameWithType: NSEventData.GetBlockExecution()
   fullName: CRMScript.NetServer.NSEventData.GetBlockExecution()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetBlockExecution()
@@ -74,7 +74,7 @@ items:
   nameWithType: NSEventData.GetException()
   fullName: CRMScript.NetServer.NSEventData.GetException()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetException()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSEventData.GetInputValues()
   fullName: CRMScript.NetServer.NSEventData.GetInputValues()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Map GetInputValues()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSEventData.GetMessage()
   fullName: CRMScript.NetServer.NSEventData.GetMessage()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMessage()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSEventData.GetNavigateTo()
   fullName: CRMScript.NetServer.NSEventData.GetNavigateTo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetNavigateTo()
@@ -154,7 +154,7 @@ items:
   nameWithType: NSEventData.GetOutputValues()
   fullName: CRMScript.NetServer.NSEventData.GetOutputValues()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Map GetOutputValues()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSEventData.GetStateValues()
   fullName: CRMScript.NetServer.NSEventData.GetStateValues()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Map GetStateValues()
@@ -229,7 +229,7 @@ items:
   nameWithType: NSEventData.SetBlockExecution(Bool)
   fullName: CRMScript.NetServer.NSEventData.SetBlockExecution(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetBlockExecution(Bool blockExecution)
@@ -251,7 +251,7 @@ items:
   nameWithType: NSEventData.SetException(String)
   fullName: CRMScript.NetServer.NSEventData.SetException(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetException(String exception)
@@ -273,7 +273,7 @@ items:
   nameWithType: NSEventData.SetInputValues(Map)
   fullName: CRMScript.NetServer.NSEventData.SetInputValues(Map)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetInputValues(Map inputValues)
@@ -295,7 +295,7 @@ items:
   nameWithType: NSEventData.SetMessage(String)
   fullName: CRMScript.NetServer.NSEventData.SetMessage(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
@@ -317,7 +317,7 @@ items:
   nameWithType: NSEventData.SetNavigateTo(String)
   fullName: CRMScript.NetServer.NSEventData.SetNavigateTo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNavigateTo(String navigateTo)
@@ -339,7 +339,7 @@ items:
   nameWithType: NSEventData.SetOutputValues(Map)
   fullName: CRMScript.NetServer.NSEventData.SetOutputValues(Map)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOutputValues(Map outputValues)
@@ -361,7 +361,7 @@ items:
   nameWithType: NSEventData.SetStateValues(Map)
   fullName: CRMScript.NetServer.NSEventData.SetStateValues(Map)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStateValues(Map stateValues)
@@ -383,7 +383,7 @@ items:
   nameWithType: NSEventData.SetType(Integer)
   fullName: CRMScript.NetServer.NSEventData.SetType(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: ""
   syntax: 
     content: Void SetType(Integer type)
