--- a/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSExportArchiveResult.GetBatchTaskId()
   fullName: CRMScript.NetServer.NSExportArchiveResult.GetBatchTaskId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetBatchTaskId()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSExportArchiveResult.GetFileName()
   fullName: CRMScript.NetServer.NSExportArchiveResult.GetFileName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFileName()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSExportArchiveResult.GetMessage()
   fullName: CRMScript.NetServer.NSExportArchiveResult.GetMessage()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMessage()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSExportArchiveResult.SetBatchTaskId(Integer)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetBatchTaskId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetBatchTaskId(Integer batchTaskId)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSExportArchiveResult.SetFileName(String)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetFileName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFileName(String fileName)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSExportArchiveResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSExportArchiveResult.SetMessage(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
