--- a/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSExtAppEntity.GetDeleted()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetDeleted()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSExtAppEntity.GetExtAppId()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetExtAppId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetExtAppId()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSExtAppEntity.GetFilename()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetFilename()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFilename()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSExtAppEntity.GetIcon()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetIcon()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetIcon()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSExtAppEntity.GetName()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSExtAppEntity.GetOnCentral()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetOnCentral()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetOnCentral()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSExtAppEntity.GetOnSalesMarketingPocket()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetOnSalesMarketingPocket()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetOnSalesMarketingPocket()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSExtAppEntity.GetOnSatellite()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetOnSatellite()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetOnSatellite()
@@ -262,7 +262,7 @@ items:
   nameWithType: NSExtAppEntity.GetOnTravel()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetOnTravel()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetOnTravel()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSExtAppEntity.GetParameters()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetParameters()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetParameters()
@@ -302,7 +302,7 @@ items:
   nameWithType: NSExtAppEntity.GetPath()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetPath()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPath()
@@ -322,7 +322,7 @@ items:
   nameWithType: NSExtAppEntity.GetRank()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetRank()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -342,7 +342,7 @@ items:
   nameWithType: NSExtAppEntity.GetShowInAddressBar()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetShowInAddressBar()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetShowInAddressBar()
@@ -362,7 +362,7 @@ items:
   nameWithType: NSExtAppEntity.GetShowInMenuBar()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetShowInMenuBar()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetShowInMenuBar()
@@ -382,7 +382,7 @@ items:
   nameWithType: NSExtAppEntity.GetShowInStatusBar()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetShowInStatusBar()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetShowInStatusBar()
@@ -402,7 +402,7 @@ items:
   nameWithType: NSExtAppEntity.GetShowInToolBar()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetShowInToolBar()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetShowInToolBar()
@@ -442,7 +442,7 @@ items:
   nameWithType: NSExtAppEntity.GetTooltip()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetTooltip()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -482,7 +482,7 @@ items:
   nameWithType: NSExtAppEntity.GetWaitToFinish()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetWaitToFinish()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetWaitToFinish()
@@ -502,7 +502,7 @@ items:
   nameWithType: NSExtAppEntity.GetWorkdir()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetWorkdir()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetWorkdir()
@@ -522,7 +522,7 @@ items:
   nameWithType: NSExtAppEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetDeleted(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -544,8 +544,8 @@ items:
   nameWithType: NSExtAppEntity.SetExecuteOnEvent(NSExecuteOnEvent)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetExecuteOnEvent(NSExecuteOnEvent)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetExecuteOnEvent(NSExecuteOnEvent executeOnEvent)
     parameters:
@@ -566,7 +566,7 @@ items:
   nameWithType: NSExtAppEntity.SetExtAppId(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetExtAppId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtAppId(Integer extAppId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSExtAppEntity.SetFilename(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetFilename(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFilename(String filename)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSExtAppEntity.SetIcon(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetIcon(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIcon(Integer icon)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSExtAppEntity.SetName(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSExtAppEntity.SetOnCentral(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetOnCentral(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOnCentral(Bool onCentral)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSExtAppEntity.SetOnSalesMarketingPocket(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetOnSalesMarketingPocket(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOnSalesMarketingPocket(Bool onSalesMarketingPocket)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSExtAppEntity.SetOnSatellite(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetOnSatellite(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOnSatellite(Bool onSatellite)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSExtAppEntity.SetOnTravel(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetOnTravel(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOnTravel(Bool onTravel)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSExtAppEntity.SetParameters(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetParameters(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetParameters(String parameters)
@@ -764,7 +764,7 @@ items:
   nameWithType: NSExtAppEntity.SetPath(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetPath(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPath(String path)
@@ -786,7 +786,7 @@ items:
   nameWithType: NSExtAppEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetRank(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSExtAppEntity.SetShowInAddressBar(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetShowInAddressBar(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShowInAddressBar(Bool showInAddressBar)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSExtAppEntity.SetShowInMenuBar(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetShowInMenuBar(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShowInMenuBar(Bool showInMenuBar)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSExtAppEntity.SetShowInStatusBar(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetShowInStatusBar(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShowInStatusBar(Bool showInStatusBar)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSExtAppEntity.SetShowInToolBar(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetShowInToolBar(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShowInToolBar(Bool showInToolBar)
@@ -896,8 +896,8 @@ items:
   nameWithType: NSExtAppEntity.SetShowState(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetShowState(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetShowState(Integer showState)
     parameters:
@@ -918,7 +918,7 @@ items:
   nameWithType: NSExtAppEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetTooltip(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -940,8 +940,8 @@ items:
   nameWithType: NSExtAppEntity.SetVisibleIn(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetVisibleIn(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetVisibleIn(Integer visibleIn)
     parameters:
@@ -962,7 +962,7 @@ items:
   nameWithType: NSExtAppEntity.SetWaitToFinish(Bool)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetWaitToFinish(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWaitToFinish(Bool waitToFinish)
@@ -984,7 +984,7 @@ items:
   nameWithType: NSExtAppEntity.SetWorkdir(String)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetWorkdir(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWorkdir(String workdir)
