--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
@@ -64,7 +64,7 @@ items:
   nameWithType: NSFieldInfoBase.GetDescription()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSFieldInfoBase.GetDisplayName()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetDisplayName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSFieldInfoBase.GetFieldName()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetFieldName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFieldName()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSFieldInfoBase.GetHideField()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetHideField()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetHideField()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSFieldInfoBase.GetHideLabel()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetHideLabel()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetHideLabel()
@@ -184,7 +184,7 @@ items:
   nameWithType: NSFieldInfoBase.GetIsExternal()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetIsExternal()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsExternal()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSFieldInfoBase.GetIsIndexed()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetIsIndexed()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsIndexed()
@@ -224,7 +224,7 @@ items:
   nameWithType: NSFieldInfoBase.GetIsMandatory()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetIsMandatory()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsMandatory()
@@ -244,7 +244,7 @@ items:
   nameWithType: NSFieldInfoBase.GetIsReadOnly()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetIsReadOnly()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsReadOnly()
@@ -264,7 +264,7 @@ items:
   nameWithType: NSFieldInfoBase.GetRank()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetRank()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -284,7 +284,7 @@ items:
   nameWithType: NSFieldInfoBase.GetShortLabel()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetShortLabel()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetShortLabel()
@@ -304,7 +304,7 @@ items:
   nameWithType: NSFieldInfoBase.GetTemplateVariableName()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetTemplateVariableName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTemplateVariableName()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSFieldInfoBase.SetDescription(String)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSFieldInfoBase.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetDisplayName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSFieldInfoBase.SetFieldName(String)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetFieldName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFieldName(String fieldName)
@@ -390,8 +390,8 @@ items:
   nameWithType: NSFieldInfoBase.SetFieldType(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetFieldType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetFieldType(Integer fieldType)
     parameters:
@@ -412,7 +412,7 @@ items:
   nameWithType: NSFieldInfoBase.SetHideField(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetHideField(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHideField(Bool hideField)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSFieldInfoBase.SetHideLabel(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetHideLabel(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHideLabel(Bool hideLabel)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSFieldInfoBase.SetIsExternal(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetIsExternal(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsExternal(Bool isExternal)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSFieldInfoBase.SetIsIndexed(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetIsIndexed(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsIndexed(Bool isIndexed)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSFieldInfoBase.SetIsMandatory(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetIsMandatory(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsMandatory(Bool isMandatory)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSFieldInfoBase.SetIsReadOnly(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetIsReadOnly(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsReadOnly(Bool isReadOnly)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSFieldInfoBase.SetRank(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetRank(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSFieldInfoBase.SetShortLabel(String)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetShortLabel(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShortLabel(String shortLabel)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSFieldInfoBase.SetTemplateVariableName(String)
   fullName: CRMScript.NetServer.NSFieldInfoBase.SetTemplateVariableName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTemplateVariableName(String templateVariableName)
