--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
@@ -40,7 +40,7 @@ items:
   nameWithType: NSFieldInfoBool.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetDefaultValue()
