--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDecimal.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDecimal.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSFieldInfoDecimal.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoDecimal.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Float GetDefaultValue()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSFieldInfoDecimal.GetPrecision()
   fullName: CRMScript.NetServer.NSFieldInfoDecimal.GetPrecision()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPrecision()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSFieldInfoDecimal.SetDefaultValue(Float)
   fullName: CRMScript.NetServer.NSFieldInfoDecimal.SetDefaultValue(Float)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Float defaultValue)
@@ -102,7 +102,7 @@ items:
   nameWithType: NSFieldInfoDecimal.SetPrecision(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoDecimal.SetPrecision(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPrecision(Integer precision)
