--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDefaultValue()
@@ -63,7 +63,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.GetLinkName()
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetLinkName()
@@ -83,7 +83,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.GetLinkValue()
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetLinkValue()
@@ -124,7 +124,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetLinkName(String)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLinkName(String linkName)
@@ -146,7 +146,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetLinkValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLinkValue(String linkValue)
