--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
@@ -40,7 +40,7 @@ items:
   nameWithType: NSFieldInfoInt.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDefaultValue()
@@ -60,7 +60,7 @@ items:
   nameWithType: NSFieldInfoInt.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoInt.SetDefaultValue(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
