--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
@@ -64,7 +64,7 @@ items:
   nameWithType: NSFieldInfoListText.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDefaultValue()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSFieldInfoListText.GetTextLength()
   fullName: CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTextLength()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSFieldInfoListText.SetChoices(String[])
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetChoices(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChoices(String[] choices)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSFieldInfoListText.SetDefaultValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetDefaultValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(String defaultValue)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSFieldInfoListText.SetTextLength(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetTextLength(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTextLength(Integer textLength)
