--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSFieldInfoRelation.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDefaultValue()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSFieldInfoRelation.GetMdoListName()
   fullName: CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMdoListName()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSFieldInfoRelation.GetTargetLabel()
   fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTargetLabel()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSFieldInfoRelation.GetTargetTable()
   fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTargetTable()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSFieldInfoRelation.GetUseDropDown()
   fullName: CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetUseDropDown()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSFieldInfoRelation.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetDefaultValue(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSFieldInfoRelation.SetMdoListName(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetMdoListName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMdoListName(String mdoListName)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSFieldInfoRelation.SetTargetLabel(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetTargetLabel(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTargetLabel(String targetLabel)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSFieldInfoRelation.SetTargetTable(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetTargetTable(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTargetTable(String targetTable)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSFieldInfoRelation.SetUseDropDown(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetUseDropDown(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUseDropDown(Bool useDropDown)
