--- a/docs/api-reference/CRMScript.NetServer.NSForeignDevice.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignDevice.yml
@@ -56,7 +56,7 @@ items:
   nameWithType: NSForeignDevice.GetAssociateFullName()
   fullName: CRMScript.NetServer.NSForeignDevice.GetAssociateFullName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetAssociateFullName()
@@ -76,7 +76,7 @@ items:
   nameWithType: NSForeignDevice.GetCreatedBy()
   fullName: CRMScript.NetServer.NSForeignDevice.GetCreatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCreatedBy()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSForeignDevice.GetCreatedDate()
   fullName: CRMScript.NetServer.NSForeignDevice.GetCreatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetCreatedDate()
@@ -116,7 +116,7 @@ items:
   nameWithType: NSForeignDevice.GetDeviceIdentifier()
   fullName: CRMScript.NetServer.NSForeignDevice.GetDeviceIdentifier()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDeviceIdentifier()
@@ -136,7 +136,7 @@ items:
   nameWithType: NSForeignDevice.GetForeignAppId()
   fullName: CRMScript.NetServer.NSForeignDevice.GetForeignAppId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetForeignAppId()
@@ -156,7 +156,7 @@ items:
   nameWithType: NSForeignDevice.GetForeignDeviceId()
   fullName: CRMScript.NetServer.NSForeignDevice.GetForeignDeviceId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetForeignDeviceId()
@@ -176,7 +176,7 @@ items:
   nameWithType: NSForeignDevice.GetName()
   fullName: CRMScript.NetServer.NSForeignDevice.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -196,7 +196,7 @@ items:
   nameWithType: NSForeignDevice.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSForeignDevice.GetUpdatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetUpdatedBy()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSForeignDevice.GetUpdatedDate()
   fullName: CRMScript.NetServer.NSForeignDevice.GetUpdatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetUpdatedDate()
@@ -236,7 +236,7 @@ items:
   nameWithType: NSForeignDevice.SetAssociateFullName(String)
   fullName: CRMScript.NetServer.NSForeignDevice.SetAssociateFullName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateFullName(String associateFullName)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSForeignDevice.SetCreatedBy(String)
   fullName: CRMScript.NetServer.NSForeignDevice.SetCreatedBy(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedBy(String createdBy)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSForeignDevice.SetCreatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignDevice.SetCreatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedDate(DateTime createdDate)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSForeignDevice.SetDeviceIdentifier(String)
   fullName: CRMScript.NetServer.NSForeignDevice.SetDeviceIdentifier(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeviceIdentifier(String deviceIdentifier)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSForeignDevice.SetForeignAppId(Integer)
   fullName: CRMScript.NetServer.NSForeignDevice.SetForeignAppId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetForeignAppId(Integer foreignAppId)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSForeignDevice.SetForeignDeviceId(Integer)
   fullName: CRMScript.NetServer.NSForeignDevice.SetForeignDeviceId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetForeignDeviceId(Integer foreignDeviceId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSForeignDevice.SetName(String)
   fullName: CRMScript.NetServer.NSForeignDevice.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSForeignDevice.SetUpdatedBy(String)
   fullName: CRMScript.NetServer.NSForeignDevice.SetUpdatedBy(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(String updatedBy)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSForeignDevice.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignDevice.SetUpdatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
