--- a/docs/api-reference/CRMScript.NetServer.NSForeignKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignKey.yml
@@ -54,7 +54,7 @@ items:
   nameWithType: NSForeignKey.GetCreatedBy()
   fullName: CRMScript.NetServer.NSForeignKey.GetCreatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCreatedBy()
@@ -74,7 +74,7 @@ items:
   nameWithType: NSForeignKey.GetCreatedDate()
   fullName: CRMScript.NetServer.NSForeignKey.GetCreatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetCreatedDate()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSForeignKey.GetKey()
   fullName: CRMScript.NetServer.NSForeignKey.GetKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetKey()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSForeignKey.GetRecordId()
   fullName: CRMScript.NetServer.NSForeignKey.GetRecordId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRecordId()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSForeignKey.GetTableName()
   fullName: CRMScript.NetServer.NSForeignKey.GetTableName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTableName()
@@ -173,7 +173,7 @@ items:
   nameWithType: NSForeignKey.GetUpdatedDate()
   fullName: CRMScript.NetServer.NSForeignKey.GetUpdatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetUpdatedDate()
@@ -193,7 +193,7 @@ items:
   nameWithType: NSForeignKey.GetValue()
   fullName: CRMScript.NetServer.NSForeignKey.GetValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetValue()
@@ -213,7 +213,7 @@ items:
   nameWithType: NSForeignKey.SetCreatedBy(String)
   fullName: CRMScript.NetServer.NSForeignKey.SetCreatedBy(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedBy(String createdBy)
@@ -235,7 +235,7 @@ items:
   nameWithType: NSForeignKey.SetCreatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignKey.SetCreatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedDate(DateTime createdDate)
@@ -257,7 +257,7 @@ items:
   nameWithType: NSForeignKey.SetKey(String)
   fullName: CRMScript.NetServer.NSForeignKey.SetKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetKey(String key)
@@ -279,7 +279,7 @@ items:
   nameWithType: NSForeignKey.SetRecordId(Integer)
   fullName: CRMScript.NetServer.NSForeignKey.SetRecordId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRecordId(Integer recordId)
@@ -301,7 +301,7 @@ items:
   nameWithType: NSForeignKey.SetTableName(String)
   fullName: CRMScript.NetServer.NSForeignKey.SetTableName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTableName(String tableName)
@@ -323,7 +323,7 @@ items:
   nameWithType: NSForeignKey.SetUpdatedBy(String)
   fullName: CRMScript.NetServer.NSForeignKey.SetUpdatedBy(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(String updatedBy)
@@ -345,7 +345,7 @@ items:
   nameWithType: NSForeignKey.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignKey.SetUpdatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
@@ -367,7 +367,7 @@ items:
   nameWithType: NSForeignKey.SetValue(String)
   fullName: CRMScript.NetServer.NSForeignKey.SetValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(String value)
