--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -101,7 +101,7 @@ items:
   nameWithType: NSFormEntity.GetConfig()
   fullName: CRMScript.NetServer.NSFormEntity.GetConfig()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetConfig()
@@ -121,7 +121,7 @@ items:
   nameWithType: NSFormEntity.GetDescription()
   fullName: CRMScript.NetServer.NSFormEntity.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -141,7 +141,7 @@ items:
   nameWithType: NSFormEntity.GetExpires()
   fullName: CRMScript.NetServer.NSFormEntity.GetExpires()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetExpires()
@@ -161,7 +161,7 @@ items:
   nameWithType: NSFormEntity.GetFolderId()
   fullName: CRMScript.NetServer.NSFormEntity.GetFolderId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFolderId()
@@ -181,7 +181,7 @@ items:
   nameWithType: NSFormEntity.GetFolderName()
   fullName: CRMScript.NetServer.NSFormEntity.GetFolderName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFolderName()
@@ -201,7 +201,7 @@ items:
   nameWithType: NSFormEntity.GetFormId()
   fullName: CRMScript.NetServer.NSFormEntity.GetFormId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFormId()
@@ -221,7 +221,7 @@ items:
   nameWithType: NSFormEntity.GetFormKey()
   fullName: CRMScript.NetServer.NSFormEntity.GetFormKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFormKey()
@@ -241,7 +241,7 @@ items:
   nameWithType: NSFormEntity.GetGroupId()
   fullName: CRMScript.NetServer.NSFormEntity.GetGroupId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetGroupId()
@@ -261,7 +261,7 @@ items:
   nameWithType: NSFormEntity.GetMaxSubmits()
   fullName: CRMScript.NetServer.NSFormEntity.GetMaxSubmits()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMaxSubmits()
@@ -281,7 +281,7 @@ items:
   nameWithType: NSFormEntity.GetName()
   fullName: CRMScript.NetServer.NSFormEntity.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -301,7 +301,7 @@ items:
   nameWithType: NSFormEntity.GetNewTicket()
   fullName: CRMScript.NetServer.NSFormEntity.GetNewTicket()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetNewTicket()
@@ -341,7 +341,7 @@ items:
   nameWithType: NSFormEntity.GetRecipe()
   fullName: CRMScript.NetServer.NSFormEntity.GetRecipe()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetRecipe()
@@ -361,7 +361,7 @@ items:
   nameWithType: NSFormEntity.GetRegistered()
   fullName: CRMScript.NetServer.NSFormEntity.GetRegistered()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetRegistered()
@@ -381,7 +381,7 @@ items:
   nameWithType: NSFormEntity.GetRegisteredAssociateId()
   fullName: CRMScript.NetServer.NSFormEntity.GetRegisteredAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRegisteredAssociateId()
@@ -401,7 +401,7 @@ items:
   nameWithType: NSFormEntity.GetResponseShipmentId()
   fullName: CRMScript.NetServer.NSFormEntity.GetResponseShipmentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetResponseShipmentId()
@@ -421,7 +421,7 @@ items:
   nameWithType: NSFormEntity.GetScriptId()
   fullName: CRMScript.NetServer.NSFormEntity.GetScriptId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetScriptId()
@@ -461,7 +461,7 @@ items:
   nameWithType: NSFormEntity.GetUpdated()
   fullName: CRMScript.NetServer.NSFormEntity.GetUpdated()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetUpdated()
@@ -481,7 +481,7 @@ items:
   nameWithType: NSFormEntity.GetUpdatedAssociateId()
   fullName: CRMScript.NetServer.NSFormEntity.GetUpdatedAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetUpdatedAssociateId()
@@ -501,7 +501,7 @@ items:
   nameWithType: NSFormEntity.GetUpdatedCount()
   fullName: CRMScript.NetServer.NSFormEntity.GetUpdatedCount()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetUpdatedCount()
@@ -521,7 +521,7 @@ items:
   nameWithType: NSFormEntity.SetActive(Bool)
   fullName: CRMScript.NetServer.NSFormEntity.SetActive(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetActive(Bool active)
@@ -543,7 +543,7 @@ items:
   nameWithType: NSFormEntity.SetConfig(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetConfig(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetConfig(String config)
@@ -565,7 +565,7 @@ items:
   nameWithType: NSFormEntity.SetDescription(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -587,7 +587,7 @@ items:
   nameWithType: NSFormEntity.SetExpires(DateTime)
   fullName: CRMScript.NetServer.NSFormEntity.SetExpires(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExpires(DateTime expires)
@@ -609,7 +609,7 @@ items:
   nameWithType: NSFormEntity.SetFolderId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetFolderId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFolderId(Integer folderId)
@@ -631,7 +631,7 @@ items:
   nameWithType: NSFormEntity.SetFolderName(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetFolderName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFolderName(String folderName)
@@ -653,7 +653,7 @@ items:
   nameWithType: NSFormEntity.SetFormId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetFormId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFormId(Integer formId)
@@ -675,7 +675,7 @@ items:
   nameWithType: NSFormEntity.SetFormKey(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetFormKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFormKey(String formKey)
@@ -697,7 +697,7 @@ items:
   nameWithType: NSFormEntity.SetGroupId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetGroupId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetGroupId(Integer groupId)
@@ -719,7 +719,7 @@ items:
   nameWithType: NSFormEntity.SetMaxSubmits(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetMaxSubmits(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMaxSubmits(Integer maxSubmits)
@@ -741,7 +741,7 @@ items:
   nameWithType: NSFormEntity.SetName(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -763,7 +763,7 @@ items:
   nameWithType: NSFormEntity.SetNewTicket(Bool)
   fullName: CRMScript.NetServer.NSFormEntity.SetNewTicket(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNewTicket(Bool newTicket)
@@ -785,8 +785,8 @@ items:
   nameWithType: NSFormEntity.SetRecaptchaMode(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetRecaptchaMode(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetRecaptchaMode(Integer recaptchaMode)
     parameters:
@@ -807,7 +807,7 @@ items:
   nameWithType: NSFormEntity.SetRecipe(String)
   fullName: CRMScript.NetServer.NSFormEntity.SetRecipe(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRecipe(String recipe)
@@ -829,7 +829,7 @@ items:
   nameWithType: NSFormEntity.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSFormEntity.SetRegistered(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -851,7 +851,7 @@ items:
   nameWithType: NSFormEntity.SetRegisteredAssociateId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetRegisteredAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegisteredAssociateId(Integer registeredAssociateId)
@@ -873,7 +873,7 @@ items:
   nameWithType: NSFormEntity.SetResponseShipmentId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetResponseShipmentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResponseShipmentId(Integer responseShipmentId)
@@ -895,7 +895,7 @@ items:
   nameWithType: NSFormEntity.SetScriptId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetScriptId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetScriptId(Integer scriptId)
@@ -917,8 +917,8 @@ items:
   nameWithType: NSFormEntity.SetType(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
@@ -939,7 +939,7 @@ items:
   nameWithType: NSFormEntity.SetUpdated(DateTime)
   fullName: CRMScript.NetServer.NSFormEntity.SetUpdated(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdated(DateTime updated)
@@ -961,7 +961,7 @@ items:
   nameWithType: NSFormEntity.SetUpdatedAssociateId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetUpdatedAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedAssociateId(Integer updatedAssociateId)
@@ -983,7 +983,7 @@ items:
   nameWithType: NSFormEntity.SetUpdatedCount(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetUpdatedCount(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedCount(Integer updatedCount)
