--- a/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
@@ -58,7 +58,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetContactId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetContactId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -78,7 +78,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetEmailAddress()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetEmailAddress()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetEmailAddress()
@@ -98,7 +98,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetFormId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetFormId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFormId()
@@ -118,7 +118,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetFormSubmissionId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetFormSubmissionId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFormSubmissionId()
@@ -138,7 +138,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetPersonId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetPersonId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -158,7 +158,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetProcessingLog()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetProcessingLog()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetProcessingLog()
@@ -178,7 +178,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetResponse()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetResponse()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetResponse()
@@ -198,7 +198,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetResponseShipmentAddrId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetResponseShipmentAddrId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetResponseShipmentAddrId()
@@ -238,7 +238,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetWhenSubmitted()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetWhenSubmitted()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetWhenSubmitted()
@@ -258,7 +258,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetContactId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetEmailAddress(String)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetEmailAddress(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEmailAddress(String emailAddress)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetFormId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetFormId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFormId(Integer formId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetFormSubmissionId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetFormSubmissionId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFormSubmissionId(Integer formSubmissionId)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetPersonId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetProcessingLog(String)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetProcessingLog(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProcessingLog(String processingLog)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetResponse(String)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetResponse(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResponse(String response)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetResponseShipmentAddrId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetResponseShipmentAddrId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResponseShipmentAddrId(Integer responseShipmentAddrId)
@@ -434,8 +434,8 @@ items:
   nameWithType: NSFormSubmissionEntity.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetStatus(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetStatus(Integer status)
     parameters:
@@ -456,7 +456,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetUpdSetWhenSubmitted(DateTime)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetUpdSetWhenSubmitted(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWhenSubmitted(DateTime whenSubmitted)
