--- a/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
@@ -72,7 +72,7 @@ items:
   nameWithType: NSFreeText.GetCountWords()
   fullName: CRMScript.NetServer.NSFreeText.GetCountWords()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetCountWords()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSFreeText.GetFreeTextEnabled()
   fullName: CRMScript.NetServer.NSFreeText.GetFreeTextEnabled()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetFreeTextEnabled()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSFreeText.GetLastGenerated()
   fullName: CRMScript.NetServer.NSFreeText.GetLastGenerated()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetLastGenerated()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSFreeText.GetOccurrences()
   fullName: CRMScript.NetServer.NSFreeText.GetOccurrences()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetOccurrences()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSFreeText.SetAutoEnableTravelAreas(Bool)
   fullName: CRMScript.NetServer.NSFreeText.SetAutoEnableTravelAreas(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAutoEnableTravelAreas(Bool autoEnableTravelAreas)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSFreeText.SetCountWords(Integer)
   fullName: CRMScript.NetServer.NSFreeText.SetCountWords(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCountWords(Integer countWords)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSFreeText.SetFreeTextEnabled(Bool)
   fullName: CRMScript.NetServer.NSFreeText.SetFreeTextEnabled(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFreeTextEnabled(Bool freeTextEnabled)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSFreeText.SetLastGenerated(DateTime)
   fullName: CRMScript.NetServer.NSFreeText.SetLastGenerated(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLastGenerated(DateTime lastGenerated)
@@ -280,8 +280,8 @@ items:
   nameWithType: NSFreeText.SetMultiWordOperator(Integer)
   fullName: CRMScript.NetServer.NSFreeText.SetMultiWordOperator(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetMultiWordOperator(Integer multiWordOperator)
     parameters:
@@ -302,7 +302,7 @@ items:
   nameWithType: NSFreeText.SetOccurrences(Integer)
   fullName: CRMScript.NetServer.NSFreeText.SetOccurrences(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOccurrences(Integer occurrences)
@@ -324,8 +324,8 @@ items:
   nameWithType: NSFreeText.SetSingleWordOperator(Integer)
   fullName: CRMScript.NetServer.NSFreeText.SetSingleWordOperator(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetSingleWordOperator(Integer singleWordOperator)
     parameters:
