--- a/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
@@ -179,7 +179,7 @@ items:
   nameWithType: NSFreeTextAgent.SetAutoEnableTravelAreas(Bool)
   fullName: CRMScript.NetServer.NSFreeTextAgent.SetAutoEnableTravelAreas(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAutoEnableTravelAreas(Bool autoEnable)
@@ -224,7 +224,7 @@ items:
   fullName: CRMScript.NetServer.NSFreeTextAgent.SetMultiWordOperator(Integer)
   type: Method
   summary: "\nSets the operator used when matching multiple words\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: Void SetMultiWordOperator(Integer freeTextOperator)
     parameters:
@@ -246,7 +246,7 @@ items:
   fullName: CRMScript.NetServer.NSFreeTextAgent.SetSingleWordOperator(Integer)
   type: Method
   summary: "\nSets the operator used when matching single words\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: Void SetSingleWordOperator(Integer freeTextOperator)
     parameters:
