--- a/docs/api-reference/CRMScript.NetServer.NSHistory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHistory.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSHistory.GetAssociateId()
   fullName: CRMScript.NetServer.NSHistory.GetAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSHistory.GetHistoryId()
   fullName: CRMScript.NetServer.NSHistory.GetHistoryId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetHistoryId()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSHistory.GetHistoryName()
   fullName: CRMScript.NetServer.NSHistory.GetHistoryName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetHistoryName()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSHistory.GetId()
   fullName: CRMScript.NetServer.NSHistory.GetId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSHistory.GetItemInfo()
   fullName: CRMScript.NetServer.NSHistory.GetItemInfo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetItemInfo()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSHistory.GetName()
   fullName: CRMScript.NetServer.NSHistory.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSHistory.GetRank()
   fullName: CRMScript.NetServer.NSHistory.GetRank()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSHistory.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSHistory.SetHistoryId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetHistoryId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHistoryId(Integer historyId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSHistory.SetHistoryName(String)
   fullName: CRMScript.NetServer.NSHistory.SetHistoryName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHistoryName(String historyName)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSHistory.SetId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSHistory.SetItemInfo(String)
   fullName: CRMScript.NetServer.NSHistory.SetItemInfo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetItemInfo(String itemInfo)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSHistory.SetName(String)
   fullName: CRMScript.NetServer.NSHistory.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSHistory.SetRank(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetRank(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
