--- a/docs/api-reference/CRMScript.NetServer.NSHistoryRequest.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHistoryRequest.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSHistoryRequest.GetEntityName()
   fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetEntityName()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSHistoryRequest.GetEntityOrParentId()
   fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetEntityOrParentId()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSHistoryRequest.GetRequestForNewRecord()
   fullName: CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetRequestForNewRecord()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSHistoryRequest.SetEntityName(String)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetEntityName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEntityName(String entityName)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSHistoryRequest.SetEntityOrParentId(Integer)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetEntityOrParentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEntityOrParentId(Integer entityOrParentId)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSHistoryRequest.SetRequestForNewRecord(Bool)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetRequestForNewRecord(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRequestForNewRecord(Bool requestForNewRecord)
