--- a/docs/api-reference/CRMScript.NetServer.NSImportColumnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportColumnInfo.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSImportColumnInfo.GetDisplayName()
   fullName: CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSImportColumnInfo.GetLocked()
   fullName: CRMScript.NetServer.NSImportColumnInfo.GetLocked()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetLocked()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSImportColumnInfo.GetName()
   fullName: CRMScript.NetServer.NSImportColumnInfo.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSImportColumnInfo.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetDisplayName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSImportColumnInfo.SetLocked(Bool)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetLocked(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLocked(Bool locked)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSImportColumnInfo.SetName(String)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
