--- a/docs/api-reference/CRMScript.NetServer.NSImportErpData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportErpData.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   fullName: CRMScript.NetServer.NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetColumnInfos(NSImportColumnInfo[] columnInfos)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSImportErpData.SetImportLines(NSImportLine[])
   fullName: CRMScript.NetServer.NSImportErpData.SetImportLines(NSImportLine[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetImportLines(NSImportLine[] importLines)
