--- a/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSImportLine.GetExternalKey()
   fullName: CRMScript.NetServer.NSImportLine.GetExternalKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetExternalKey()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSImportLine.GetSelected()
   fullName: CRMScript.NetServer.NSImportLine.GetSelected()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSelected()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSImportLine.SetExternalKey(String)
   fullName: CRMScript.NetServer.NSImportLine.SetExternalKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExternalKey(String externalKey)
@@ -170,8 +170,8 @@ items:
   nameWithType: NSImportLine.SetOperation(Integer)
   fullName: CRMScript.NetServer.NSImportLine.SetOperation(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetOperation(Integer operation)
     parameters:
@@ -192,7 +192,7 @@ items:
   nameWithType: NSImportLine.SetSelected(Bool)
   fullName: CRMScript.NetServer.NSImportLine.SetSelected(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSelected(Bool selected)
@@ -214,8 +214,8 @@ items:
   nameWithType: NSImportLine.SetType(Integer)
   fullName: CRMScript.NetServer.NSImportLine.SetType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
@@ -236,7 +236,7 @@ items:
   nameWithType: NSImportLine.SetValues(String[])
   fullName: CRMScript.NetServer.NSImportLine.SetValues(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValues(String[] values)
