--- a/docs/api-reference/CRMScript.NetServer.NSIncomingMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSIncomingMessage.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSIncomingMessage.GetContent()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetContent()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetContent()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSIncomingMessage.GetFormat()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetFormat()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFormat()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSIncomingMessage.GetFrom()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetFrom()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFrom()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSIncomingMessage.GetPlugin()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetPlugin()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPlugin()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSIncomingMessage.GetSessionKey()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetSessionKey()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSIncomingMessage.GetTo()
   fullName: CRMScript.NetServer.NSIncomingMessage.GetTo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTo()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSIncomingMessage.SetContent(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetContent(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContent(String content)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSIncomingMessage.SetFormat(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetFormat(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFormat(String format)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSIncomingMessage.SetFrom(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetFrom(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFrom(String from)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSIncomingMessage.SetPlugin(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetPlugin(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPlugin(String plugin)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSIncomingMessage.SetSessionKey(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetSessionKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSessionKey(String sessionKey)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSIncomingMessage.SetTo(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetTo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTo(String to)
