--- a/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSKbCategory.GetDescription()
   fullName: CRMScript.NetServer.NSKbCategory.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSKbCategory.GetFullname()
   fullName: CRMScript.NetServer.NSKbCategory.GetFullname()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFullname()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSKbCategory.GetKbCategoryId()
   fullName: CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetKbCategoryId()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSKbCategory.GetName()
   fullName: CRMScript.NetServer.NSKbCategory.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSKbCategory.GetParentId()
   fullName: CRMScript.NetServer.NSKbCategory.GetParentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetParentId()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSKbCategory.GetSortOrder()
   fullName: CRMScript.NetServer.NSKbCategory.GetSortOrder()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSortOrder()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSKbCategory.SetDescription(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSKbCategory.SetFullname(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetFullname(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFullname(String fullname)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSKbCategory.SetKbCategoryId(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetKbCategoryId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetKbCategoryId(Integer kbCategoryId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSKbCategory.SetName(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSKbCategory.SetParentId(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetParentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetParentId(Integer parentId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSKbCategory.SetSortOrder(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetSortOrder(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSortOrder(Integer sortOrder)
