--- a/docs/api-reference/CRMScript.NetServer.NSLegalBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLegalBase.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLegalBase.#ctor
   - CRMScript.NetServer.NSLegalBase.GetDeleted()
   - CRMScript.NetServer.NSLegalBase.GetKey()
   - CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
   - CRMScript.NetServer.NSLegalBase.GetName()
   - CRMScript.NetServer.NSLegalBase.GetRank()
   - CRMScript.NetServer.NSLegalBase.GetTooltip()
-  - CRMScript.NetServer.NSLegalBase.#ctor
   - CRMScript.NetServer.NSLegalBase.SetDeleted(Bool)
   - CRMScript.NetServer.NSLegalBase.SetKey(String)
   - CRMScript.NetServer.NSLegalBase.SetLegalBaseId(Integer)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSLegalBase.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSLegalBase.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSLegalBase.GetDeleted()
-  fullName: CRMScript.NetServer.NSLegalBase.GetDeleted()
-  type: Method
-  summary: "\ntrue if the LegalBase is deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLegalBase.GetKey()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetKey()
-  id: 'GetKey()'
-  so.intellisense: NSLegalBase.GetKey
-  langs:
-  - crmscript
-  name: 'GetKey()'
-  nameWithType: NSLegalBase.GetKey()
-  fullName: CRMScript.NetServer.NSLegalBase.GetKey()
-  type: Method
-  summary: "\nThe key used to uniquely identify this legal base\n"
-  remarks: 
-  syntax: 
-    content: String GetKey()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nString key = thing.GetKey();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
-  id: 'GetLegalBaseId()'
-  so.intellisense: NSLegalBase.GetLegalBaseId
-  langs:
-  - crmscript
-  name: 'GetLegalBaseId()'
-  nameWithType: NSLegalBase.GetLegalBaseId()
-  fullName: CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLegalBaseId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nInteger legalBaseId = thing.GetLegalBaseId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLegalBase.GetName()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetName()
-  id: 'GetName()'
-  so.intellisense: NSLegalBase.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSLegalBase.GetName()
-  fullName: CRMScript.NetServer.NSLegalBase.GetName()
-  type: Method
-  summary: "\nName of legal base\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLegalBase.GetRank()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSLegalBase.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSLegalBase.GetRank()
-  fullName: CRMScript.NetServer.NSLegalBase.GetRank()
-  type: Method
-  summary: "\nRank of this consent source\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLegalBase.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSLegalBase.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSLegalBase.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSLegalBase.GetTooltip()
-  fullName: CRMScript.NetServer.NSLegalBase.GetTooltip()
-  type: Method
-  summary: "\nTooltip for this consent source\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLegalBase thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLegalBase.#ctor
   commentId: M:CRMScript.NetServer.NSLegalBase.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSLegalBase
   example: 
+- uid: CRMScript.NetServer.NSLegalBase.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSLegalBase.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSLegalBase.GetDeleted()
+  fullName: CRMScript.NetServer.NSLegalBase.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: true if the LegalBase is deleted
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLegalBase.GetKey()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetKey()
+  id: 'GetKey()'
+  so.intellisense: NSLegalBase.GetKey
+  langs:
+  - crmscript
+  name: 'GetKey()'
+  nameWithType: NSLegalBase.GetKey()
+  fullName: CRMScript.NetServer.NSLegalBase.GetKey()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetKey()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The key used to uniquely identify this legal base
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nString key = thing.GetKey();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
+  id: 'GetLegalBaseId()'
+  so.intellisense: NSLegalBase.GetLegalBaseId
+  langs:
+  - crmscript
+  name: 'GetLegalBaseId()'
+  nameWithType: NSLegalBase.GetLegalBaseId()
+  fullName: CRMScript.NetServer.NSLegalBase.GetLegalBaseId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLegalBaseId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nInteger legalBaseId = thing.GetLegalBaseId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLegalBase.GetName()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetName()
+  id: 'GetName()'
+  so.intellisense: NSLegalBase.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSLegalBase.GetName()
+  fullName: CRMScript.NetServer.NSLegalBase.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of legal base
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLegalBase.GetRank()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSLegalBase.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSLegalBase.GetRank()
+  fullName: CRMScript.NetServer.NSLegalBase.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank of this consent source
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLegalBase.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSLegalBase.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSLegalBase.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSLegalBase.GetTooltip()
+  fullName: CRMScript.NetServer.NSLegalBase.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip for this consent source
+  example: 
+  - "\n<pre><code>NSLegalBase thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLegalBase.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSLegalBase.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSLegalBase.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSLegalBase.SetDeleted(Bool)
   type: Method
-  summary: "\ntrue if the LegalBase is deleted\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: true if the LegalBase is deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSLegalBase.SetKey(String)
   fullName: CRMScript.NetServer.NSLegalBase.SetKey(String)
   type: Method
-  summary: "\nThe key used to uniquely identify this legal base\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetKey(String key)
     parameters:
     - id: key
       type: CRMScript.Global.String
-      description: 
+      description: The key used to uniquely identify this legal base
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSLegalBase.SetLegalBaseId(Integer)
   fullName: CRMScript.NetServer.NSLegalBase.SetLegalBaseId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLegalBaseId(Integer legalBaseId)
     parameters:
     - id: legalBaseId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSLegalBase.SetName(String)
   fullName: CRMScript.NetServer.NSLegalBase.SetName(String)
   type: Method
-  summary: "\nName of legal base\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of legal base
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSLegalBase.SetRank(Integer)
   fullName: CRMScript.NetServer.NSLegalBase.SetRank(Integer)
   type: Method
-  summary: "\nRank of this consent source\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank of this consent source
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSLegalBase.SetTooltip(String)
   fullName: CRMScript.NetServer.NSLegalBase.SetTooltip(String)
   type: Method
-  summary: "\nTooltip for this consent source\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip for this consent source
     return:
       type: CRMScript.Global.Void
   example: 
