--- a/docs/api-reference/CRMScript.NetServer.NSListEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSListEntity.#ctor
   - CRMScript.NetServer.NSListEntity.GetDeleted()
   - CRMScript.NetServer.NSListEntity.GetId()
   - CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
@@ -16,7 +17,6 @@ items:
   - CRMScript.NetServer.NSListEntity.GetRank()
   - CRMScript.NetServer.NSListEntity.GetTooltip()
   - CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
-  - CRMScript.NetServer.NSListEntity.#ctor
   - CRMScript.NetServer.NSListEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSListEntity.SetId(Integer)
   - CRMScript.NetServer.NSListEntity.SetInUseByUserDefinedFields(Bool)
@@ -33,196 +33,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSListEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSListEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSListEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSListEntity.GetDeleted()
-  type: Method
-  summary: "\nTrue if the list item is marked as deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetId()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetId()
-  id: 'GetId()'
-  so.intellisense: NSListEntity.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSListEntity.GetId()
-  fullName: CRMScript.NetServer.NSListEntity.GetId()
-  type: Method
-  summary: "\nThe identity of the list\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
-  id: 'GetInUseByUserDefinedFields()'
-  so.intellisense: NSListEntity.GetInUseByUserDefinedFields
-  langs:
-  - crmscript
-  name: 'GetInUseByUserDefinedFields()'
-  nameWithType: NSListEntity.GetInUseByUserDefinedFields()
-  fullName: CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
-  type: Method
-  summary: "\nTrue if this in use by one or more udfields\n"
-  remarks: 
-  syntax: 
-    content: Bool GetInUseByUserDefinedFields()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nBool inUseByUserDefinedFields = thing.GetInUseByUserDefinedFields();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetIsCustomList()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetIsCustomList()
-  id: 'GetIsCustomList()'
-  so.intellisense: NSListEntity.GetIsCustomList
-  langs:
-  - crmscript
-  name: 'GetIsCustomList()'
-  nameWithType: NSListEntity.GetIsCustomList()
-  fullName: CRMScript.NetServer.NSListEntity.GetIsCustomList()
-  type: Method
-  summary: "\nIndicates if this is a custom list or a standard list\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsCustomList()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nBool isCustomList = thing.GetIsCustomList();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetIsMDOList()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetIsMDOList()
-  id: 'GetIsMDOList()'
-  so.intellisense: NSListEntity.GetIsMDOList
-  langs:
-  - crmscript
-  name: 'GetIsMDOList()'
-  nameWithType: NSListEntity.GetIsMDOList()
-  fullName: CRMScript.NetServer.NSListEntity.GetIsMDOList()
-  type: Method
-  summary: "\nIndicates if this is a MDO list\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsMDOList()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nBool isMDOList = thing.GetIsMDOList();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetListType()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetListType()
-  id: 'GetListType()'
-  so.intellisense: NSListEntity.GetListType
-  langs:
-  - crmscript
-  name: 'GetListType()'
-  nameWithType: NSListEntity.GetListType()
-  fullName: CRMScript.NetServer.NSListEntity.GetListType()
-  type: Method
-  summary: "\nThe type of this list, often indicated by the database name, but not necessarily\n"
-  remarks: 
-  syntax: 
-    content: String GetListType()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nString listType = thing.GetListType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSListEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSListEntity.GetName()
-  fullName: CRMScript.NetServer.NSListEntity.GetName()
-  type: Method
-  summary: "\nThe name of the list\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSListEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSListEntity.GetRank()
-  fullName: CRMScript.NetServer.NSListEntity.GetRank()
-  type: Method
-  summary: "\nThe rank of the list\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSListEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSListEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSListEntity.GetTooltip()
-  type: Method
-  summary: "\nThe tooltip of the list\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
-  commentId: M:CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
-  id: 'GetUseGroupsAndHeadings()'
-  so.intellisense: NSListEntity.GetUseGroupsAndHeadings
-  langs:
-  - crmscript
-  name: 'GetUseGroupsAndHeadings()'
-  nameWithType: NSListEntity.GetUseGroupsAndHeadings()
-  fullName: CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
-  type: Method
-  summary: "\nIndicates if this list should use groups and headings\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseGroupsAndHeadings()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListEntity thing;\nBool useGroupsAndHeadings = thing.GetUseGroupsAndHeadings();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListEntity.#ctor
   commentId: M:CRMScript.NetServer.NSListEntity.#ctor
   id: '#ctor'
@@ -238,6 +48,206 @@ items:
   syntax: 
     content: NSListEntity
   example: 
+- uid: CRMScript.NetServer.NSListEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSListEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSListEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSListEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if the list item is marked as deleted
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetId()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetId()
+  id: 'GetId()'
+  so.intellisense: NSListEntity.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSListEntity.GetId()
+  fullName: CRMScript.NetServer.NSListEntity.GetId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The identity of the list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
+  id: 'GetInUseByUserDefinedFields()'
+  so.intellisense: NSListEntity.GetInUseByUserDefinedFields
+  langs:
+  - crmscript
+  name: 'GetInUseByUserDefinedFields()'
+  nameWithType: NSListEntity.GetInUseByUserDefinedFields()
+  fullName: CRMScript.NetServer.NSListEntity.GetInUseByUserDefinedFields()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetInUseByUserDefinedFields()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if this in use by one or more udfields
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nBool inUseByUserDefinedFields = thing.GetInUseByUserDefinedFields();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetIsCustomList()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetIsCustomList()
+  id: 'GetIsCustomList()'
+  so.intellisense: NSListEntity.GetIsCustomList
+  langs:
+  - crmscript
+  name: 'GetIsCustomList()'
+  nameWithType: NSListEntity.GetIsCustomList()
+  fullName: CRMScript.NetServer.NSListEntity.GetIsCustomList()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsCustomList()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicates if this is a custom list or a standard list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nBool isCustomList = thing.GetIsCustomList();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetIsMDOList()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetIsMDOList()
+  id: 'GetIsMDOList()'
+  so.intellisense: NSListEntity.GetIsMDOList
+  langs:
+  - crmscript
+  name: 'GetIsMDOList()'
+  nameWithType: NSListEntity.GetIsMDOList()
+  fullName: CRMScript.NetServer.NSListEntity.GetIsMDOList()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsMDOList()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicates if this is a MDO list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nBool isMDOList = thing.GetIsMDOList();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetListType()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetListType()
+  id: 'GetListType()'
+  so.intellisense: NSListEntity.GetListType
+  langs:
+  - crmscript
+  name: 'GetListType()'
+  nameWithType: NSListEntity.GetListType()
+  fullName: CRMScript.NetServer.NSListEntity.GetListType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetListType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The type of this list, often indicated by the database name, but not necessarily
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nString listType = thing.GetListType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSListEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSListEntity.GetName()
+  fullName: CRMScript.NetServer.NSListEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSListEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSListEntity.GetRank()
+  fullName: CRMScript.NetServer.NSListEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The rank of the list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSListEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSListEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSListEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip of the list
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
+  commentId: M:CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
+  id: 'GetUseGroupsAndHeadings()'
+  so.intellisense: NSListEntity.GetUseGroupsAndHeadings
+  langs:
+  - crmscript
+  name: 'GetUseGroupsAndHeadings()'
+  nameWithType: NSListEntity.GetUseGroupsAndHeadings()
+  fullName: CRMScript.NetServer.NSListEntity.GetUseGroupsAndHeadings()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetUseGroupsAndHeadings()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicates if this list should use groups and headings
+  example: 
+  - "\n<pre><code>NSListEntity thing;\nBool useGroupsAndHeadings = thing.GetUseGroupsAndHeadings();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSListEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -248,14 +258,14 @@ items:
   nameWithType: NSListEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSListEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nTrue if the list item is marked as deleted\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the list item is marked as deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -270,14 +280,14 @@ items:
   nameWithType: NSListEntity.SetId(Integer)
   fullName: CRMScript.NetServer.NSListEntity.SetId(Integer)
   type: Method
-  summary: "\nThe identity of the list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: The identity of the list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -292,14 +302,14 @@ items:
   nameWithType: NSListEntity.SetInUseByUserDefinedFields(Bool)
   fullName: CRMScript.NetServer.NSListEntity.SetInUseByUserDefinedFields(Bool)
   type: Method
-  summary: "\nTrue if this in use by one or more udfields\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetInUseByUserDefinedFields(Bool inUseByUserDefinedFields)
     parameters:
     - id: inUseByUserDefinedFields
       type: CRMScript.Global.Bool
-      description: 
+      description: True if this in use by one or more udfields
     return:
       type: CRMScript.Global.Void
   example: 
@@ -314,14 +324,14 @@ items:
   nameWithType: NSListEntity.SetIsCustomList(Bool)
   fullName: CRMScript.NetServer.NSListEntity.SetIsCustomList(Bool)
   type: Method
-  summary: "\nIndicates if this is a custom list or a standard list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsCustomList(Bool isCustomList)
     parameters:
     - id: isCustomList
       type: CRMScript.Global.Bool
-      description: 
+      description: Indicates if this is a custom list or a standard list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -336,14 +346,14 @@ items:
   nameWithType: NSListEntity.SetIsMDOList(Bool)
   fullName: CRMScript.NetServer.NSListEntity.SetIsMDOList(Bool)
   type: Method
-  summary: "\nIndicates if this is a MDO list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsMDOList(Bool isMDOList)
     parameters:
     - id: isMDOList
       type: CRMScript.Global.Bool
-      description: 
+      description: Indicates if this is a MDO list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -358,14 +368,14 @@ items:
   nameWithType: NSListEntity.SetListType(String)
   fullName: CRMScript.NetServer.NSListEntity.SetListType(String)
   type: Method
-  summary: "\nThe type of this list, often indicated by the database name, but not necessarily\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetListType(String listType)
     parameters:
     - id: listType
       type: CRMScript.Global.String
-      description: 
+      description: The type of this list, often indicated by the database name, but not necessarily
     return:
       type: CRMScript.Global.Void
   example: 
@@ -380,14 +390,14 @@ items:
   nameWithType: NSListEntity.SetName(String)
   fullName: CRMScript.NetServer.NSListEntity.SetName(String)
   type: Method
-  summary: "\nThe name of the list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -402,14 +412,14 @@ items:
   nameWithType: NSListEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSListEntity.SetRank(Integer)
   type: Method
-  summary: "\nThe rank of the list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: The rank of the list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -424,14 +434,14 @@ items:
   nameWithType: NSListEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSListEntity.SetTooltip(String)
   type: Method
-  summary: "\nThe tooltip of the list\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip of the list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -446,14 +456,14 @@ items:
   nameWithType: NSListEntity.SetUseGroupsAndHeadings(Bool)
   fullName: CRMScript.NetServer.NSListEntity.SetUseGroupsAndHeadings(Bool)
   type: Method
-  summary: "\nIndicates if this list should use groups and headings\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUseGroupsAndHeadings(Bool useGroupsAndHeadings)
     parameters:
     - id: useGroupsAndHeadings
       type: CRMScript.Global.Bool
-      description: 
+      description: Indicates if this list should use groups and headings
     return:
       type: CRMScript.Global.Void
   example: 
