--- a/docs/api-reference/CRMScript.NetServer.NSListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListItem.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSListItem.#ctor
   - CRMScript.NetServer.NSListItem.GetId()
   - CRMScript.NetServer.NSListItem.GetName()
   - CRMScript.NetServer.NSListItem.GetToolTip()
-  - CRMScript.NetServer.NSListItem.#ctor
   - CRMScript.NetServer.NSListItem.SetId(Integer)
   - CRMScript.NetServer.NSListItem.SetName(String)
   - CRMScript.NetServer.NSListItem.SetToolTip(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSListItem.GetId()
-  commentId: M:CRMScript.NetServer.NSListItem.GetId()
-  id: 'GetId()'
-  so.intellisense: NSListItem.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSListItem.GetId()
-  fullName: CRMScript.NetServer.NSListItem.GetId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItem.GetName()
-  commentId: M:CRMScript.NetServer.NSListItem.GetName()
-  id: 'GetName()'
-  so.intellisense: NSListItem.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSListItem.GetName()
-  fullName: CRMScript.NetServer.NSListItem.GetName()
-  type: Method
-  summary: "\nDisplay text name\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListItem thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItem.GetToolTip()
-  commentId: M:CRMScript.NetServer.NSListItem.GetToolTip()
-  id: 'GetToolTip()'
-  so.intellisense: NSListItem.GetToolTip
-  langs:
-  - crmscript
-  name: 'GetToolTip()'
-  nameWithType: NSListItem.GetToolTip()
-  fullName: CRMScript.NetServer.NSListItem.GetToolTip()
-  type: Method
-  summary: "\nDescription\n"
-  remarks: 
-  syntax: 
-    content: String GetToolTip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListItem thing;\nString toolTip = thing.GetToolTip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListItem.#ctor
   commentId: M:CRMScript.NetServer.NSListItem.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSListItem
   example: 
+- uid: CRMScript.NetServer.NSListItem.GetId()
+  commentId: M:CRMScript.NetServer.NSListItem.GetId()
+  id: 'GetId()'
+  so.intellisense: NSListItem.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSListItem.GetId()
+  fullName: CRMScript.NetServer.NSListItem.GetId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItem.GetName()
+  commentId: M:CRMScript.NetServer.NSListItem.GetName()
+  id: 'GetName()'
+  so.intellisense: NSListItem.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSListItem.GetName()
+  fullName: CRMScript.NetServer.NSListItem.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display text name
+  example: 
+  - "\n<pre><code>NSListItem thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItem.GetToolTip()
+  commentId: M:CRMScript.NetServer.NSListItem.GetToolTip()
+  id: 'GetToolTip()'
+  so.intellisense: NSListItem.GetToolTip
+  langs:
+  - crmscript
+  name: 'GetToolTip()'
+  nameWithType: NSListItem.GetToolTip()
+  fullName: CRMScript.NetServer.NSListItem.GetToolTip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetToolTip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Description
+  example: 
+  - "\n<pre><code>NSListItem thing;\nString toolTip = thing.GetToolTip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListItem.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSListItem.SetId(Integer)
   id: 'SetId(Integer)'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSListItem.SetId(Integer)
   fullName: CRMScript.NetServer.NSListItem.SetId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSListItem.SetName(String)
   fullName: CRMScript.NetServer.NSListItem.SetName(String)
   type: Method
-  summary: "\nDisplay text name\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Display text name
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSListItem.SetToolTip(String)
   fullName: CRMScript.NetServer.NSListItem.SetToolTip(String)
   type: Method
-  summary: "\nDescription\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetToolTip(String toolTip)
     parameters:
     - id: toolTip
       type: CRMScript.Global.String
-      description: 
+      description: Description
     return:
       type: CRMScript.Global.Void
   example: 
