--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLocalizedField.#ctor
   - CRMScript.NetServer.NSLocalizedField.GetAddressType()
   - CRMScript.NetServer.NSLocalizedField.GetLabel()
   - CRMScript.NetServer.NSLocalizedField.GetName()
   - CRMScript.NetServer.NSLocalizedField.GetTooltip()
   - CRMScript.NetServer.NSLocalizedField.GetValue()
   - CRMScript.NetServer.NSLocalizedField.GetValueLength()
-  - CRMScript.NetServer.NSLocalizedField.#ctor
   - CRMScript.NetServer.NSLocalizedField.SetAddressType(String)
   - CRMScript.NetServer.NSLocalizedField.SetLabel(String)
   - CRMScript.NetServer.NSLocalizedField.SetName(String)
@@ -23,115 +23,7 @@ items:
   nameWithType: NSLocalizedField
   fullName: CRMScript.NetServer.NSLocalizedField
   type: Class
-  summary: 
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetAddressType()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetAddressType()
-  id: 'GetAddressType()'
-  so.intellisense: NSLocalizedField.GetAddressType
-  langs:
-  - crmscript
-  name: 'GetAddressType()'
-  nameWithType: NSLocalizedField.GetAddressType()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetAddressType()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetAddressType()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetLabel()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetLabel()
-  id: 'GetLabel()'
-  so.intellisense: NSLocalizedField.GetLabel
-  langs:
-  - crmscript
-  name: 'GetLabel()'
-  nameWithType: NSLocalizedField.GetLabel()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetLabel()
-  type: Method
-  summary: "\nThe label of the field\n"
-  remarks: 
-  syntax: 
-    content: GetLabel()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetName()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetName()
-  id: 'GetName()'
-  so.intellisense: NSLocalizedField.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSLocalizedField.GetName()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetName()
-  type: Method
-  summary: "\nName of the value field\n"
-  remarks: 
-  syntax: 
-    content: GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSLocalizedField.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSLocalizedField.GetTooltip()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetTooltip()
-  type: Method
-  summary: "\nThe tooltip\n"
-  remarks: 
-  syntax: 
-    content: GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetValue()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSLocalizedField.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSLocalizedField.GetValue()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetValue()
-  type: Method
-  summary: "\nThe field's value\n"
-  remarks: 
-  syntax: 
-    content: GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSLocalizedField.GetValueLength()
-  commentId: M:CRMScript.NetServer.NSLocalizedField.GetValueLength()
-  id: 'GetValueLength()'
-  so.intellisense: NSLocalizedField.GetValueLength
-  langs:
-  - crmscript
-  name: 'GetValueLength()'
-  nameWithType: NSLocalizedField.GetValueLength()
-  fullName: CRMScript.NetServer.NSLocalizedField.GetValueLength()
-  type: Method
-  summary: "\nDatabase length of the value\n"
-  remarks: 
-  syntax: 
-    content: GetValueLength()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
+  summary: "\nCarrier object for LocalizedField.n"
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.#ctor
   commentId: M:CRMScript.NetServer.NSLocalizedField.#ctor
@@ -148,6 +40,120 @@ items:
   syntax: 
     content: NSLocalizedField
   example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetAddressType()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetAddressType()
+  id: 'GetAddressType()'
+  so.intellisense: NSLocalizedField.GetAddressType
+  langs:
+  - crmscript
+  name: 'GetAddressType()'
+  nameWithType: NSLocalizedField.GetAddressType()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetAddressType()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetAddressType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: 
+  example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetLabel()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetLabel()
+  id: 'GetLabel()'
+  so.intellisense: NSLocalizedField.GetLabel
+  langs:
+  - crmscript
+  name: 'GetLabel()'
+  nameWithType: NSLocalizedField.GetLabel()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetLabel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The label of the field
+  example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetName()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetName()
+  id: 'GetName()'
+  so.intellisense: NSLocalizedField.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSLocalizedField.GetName()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the value field
+  example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSLocalizedField.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSLocalizedField.GetTooltip()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip
+  example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetValue()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSLocalizedField.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSLocalizedField.GetValue()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The field's value
+  example: 
+- uid: CRMScript.NetServer.NSLocalizedField.GetValueLength()
+  commentId: M:CRMScript.NetServer.NSLocalizedField.GetValueLength()
+  id: 'GetValueLength()'
+  so.intellisense: NSLocalizedField.GetValueLength
+  langs:
+  - crmscript
+  name: 'GetValueLength()'
+  nameWithType: NSLocalizedField.GetValueLength()
+  fullName: CRMScript.NetServer.NSLocalizedField.GetValueLength()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetValueLength()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Database length of the value
+  example: 
 - uid: CRMScript.NetServer.NSLocalizedField.SetAddressType(String)
   commentId: M:CRMScript.NetServer.NSLocalizedField.SetAddressType(String)
   id: 'SetAddressType(String)'
@@ -161,9 +167,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetAddressType(String p_0)
+    content: Void SetAddressType(String type)
     parameters:
-    - id: p_0
+    - id: type
       type: CRMScript.Global.String
       description: 
     return:
@@ -179,14 +185,14 @@ items:
   nameWithType: NSLocalizedField.SetLabel(String)
   fullName: CRMScript.NetServer.NSLocalizedField.SetLabel(String)
   type: Method
-  summary: "\nThe label of the field\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: Void SetLabel(String p_0)
+    content: Void SetLabel(String label)
     parameters:
-    - id: p_0
+    - id: label
       type: CRMScript.Global.String
-      description: 
+      description: The label of the field
     return:
       type: CRMScript.Global.Void
   example: 
@@ -200,14 +206,14 @@ items:
   nameWithType: NSLocalizedField.SetName(String)
   fullName: CRMScript.NetServer.NSLocalizedField.SetName(String)
   type: Method
-  summary: "\nName of the value field\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: Void SetName(String p_0)
+    content: Void SetName(String name)
     parameters:
-    - id: p_0
+    - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of the value field
     return:
       type: CRMScript.Global.Void
   example: 
@@ -221,14 +227,14 @@ items:
   nameWithType: NSLocalizedField.SetTooltip(String)
   fullName: CRMScript.NetServer.NSLocalizedField.SetTooltip(String)
   type: Method
-  summary: "\nThe tooltip\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: Void SetTooltip(String p_0)
+    content: Void SetTooltip(String tooltip)
     parameters:
-    - id: p_0
+    - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip
     return:
       type: CRMScript.Global.Void
   example: 
@@ -242,14 +248,14 @@ items:
   nameWithType: NSLocalizedField.SetValue(String)
   fullName: CRMScript.NetServer.NSLocalizedField.SetValue(String)
   type: Method
-  summary: "\nThe field's value\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: Void SetValue(String p_0)
+    content: Void SetValue(String value)
     parameters:
-    - id: p_0
+    - id: value
       type: CRMScript.Global.String
-      description: 
+      description: The field's value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -263,14 +269,14 @@ items:
   nameWithType: NSLocalizedField.SetValueLength(Integer)
   fullName: CRMScript.NetServer.NSLocalizedField.SetValueLength(Integer)
   type: Method
-  summary: "\nDatabase length of the value\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: Void SetValueLength(Integer p_0)
+    content: Void SetValueLength(Integer length)
     parameters:
-    - id: p_0
+    - id: length
       type: CRMScript.Global.Integer
-      description: 
+      description: Database length of the value
     return:
       type: CRMScript.Global.Void
   example: 
