--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLocalizedText.#ctor
   - CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
   - CRMScript.NetServer.NSLocalizedText.GetLanguageId()
   - CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
   - CRMScript.NetServer.NSLocalizedText.GetResourceId()
   - CRMScript.NetServer.NSLocalizedText.GetText()
   - CRMScript.NetServer.NSLocalizedText.GetType()
-  - CRMScript.NetServer.NSLocalizedText.#ctor
   - CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
   - CRMScript.NetServer.NSLocalizedText.SetLanguageId(Integer)
   - CRMScript.NetServer.NSLocalizedText.SetLocalizedTextId(Integer)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
-  id: 'GetIsBuiltIn()'
-  so.intellisense: NSLocalizedText.GetIsBuiltIn
-  langs:
-  - crmscript
-  name: 'GetIsBuiltIn()'
-  nameWithType: NSLocalizedText.GetIsBuiltIn()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
-  type: Method
-  summary: "\n1 = this row is populated and maintained by SuperOffice\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsBuiltIn()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nBool isBuiltIn = thing.GetIsBuiltIn();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLocalizedText.GetLanguageId()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetLanguageId()
-  id: 'GetLanguageId()'
-  so.intellisense: NSLocalizedText.GetLanguageId
-  langs:
-  - crmscript
-  name: 'GetLanguageId()'
-  nameWithType: NSLocalizedText.GetLanguageId()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetLanguageId()
-  type: Method
-  summary: "\nLanguage id as LCID value\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLanguageId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nInteger languageId = thing.GetLanguageId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
-  id: 'GetLocalizedTextId()'
-  so.intellisense: NSLocalizedText.GetLocalizedTextId
-  langs:
-  - crmscript
-  name: 'GetLocalizedTextId()'
-  nameWithType: NSLocalizedText.GetLocalizedTextId()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLocalizedTextId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nInteger localizedTextId = thing.GetLocalizedTextId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLocalizedText.GetResourceId()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetResourceId()
-  id: 'GetResourceId()'
-  so.intellisense: NSLocalizedText.GetResourceId
-  langs:
-  - crmscript
-  name: 'GetResourceId()'
-  nameWithType: NSLocalizedText.GetResourceId()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetResourceId()
-  type: Method
-  summary: "\nResource ID\n"
-  remarks: 
-  syntax: 
-    content: Integer GetResourceId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nInteger resourceId = thing.GetResourceId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLocalizedText.GetText()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetText()
-  id: 'GetText()'
-  so.intellisense: NSLocalizedText.GetText
-  langs:
-  - crmscript
-  name: 'GetText()'
-  nameWithType: NSLocalizedText.GetText()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetText()
-  type: Method
-  summary: "\nThe text string itself\n"
-  remarks: 
-  syntax: 
-    content: String GetText()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nString text = thing.GetText();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLocalizedText.GetType()
-  commentId: M:CRMScript.NetServer.NSLocalizedText.GetType()
-  id: 'GetType()'
-  so.intellisense: NSLocalizedText.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSLocalizedText.GetType()
-  fullName: CRMScript.NetServer.NSLocalizedText.GetType()
-  type: Method
-  summary: "\nThe type of the text string, e.g. Field label, Udef label, etc.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Label</li><li>Enum: 2 = Table</li><li>Enum: 3 = Column</li><li>Enum: 4 = ImportField</li><li>Enum: 5 = ImportObject</li><li>Enum: 6 = ImportGUICategory</li><li>Enum: 7 = StartupHints</li><li>Enum: 11 = FunctionRightLabel</li><li>Enum: 12 = FunctionRightDesc</li><li>Enum: 16 = StatusMonitorName</li><li>Enum: 19 = UdefContactLabel</li><li>Enum: 20 = UdefPersonLabel</li><li>Enum: 21 = UdefProjectLabel</li><li>Enum: 22 = UdefSaleLabel</li><li>Enum: 23 = UdefAppointmentLabel</li><li>Enum: 24 = UdefDocumentLabel</li><li>Enum: 41 = PushNotificationText</li></ul><pre><code>NSLocalizedText thing;\nInteger type = thing.GetType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetType()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLocalizedText thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLocalizedText.#ctor
   commentId: M:CRMScript.NetServer.NSLocalizedText.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSLocalizedText
   example: 
+- uid: CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
+  id: 'GetIsBuiltIn()'
+  so.intellisense: NSLocalizedText.GetIsBuiltIn
+  langs:
+  - crmscript
+  name: 'GetIsBuiltIn()'
+  nameWithType: NSLocalizedText.GetIsBuiltIn()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetIsBuiltIn()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsBuiltIn()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 1 = this row is populated and maintained by SuperOffice
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nBool isBuiltIn = thing.GetIsBuiltIn();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLocalizedText.GetLanguageId()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetLanguageId()
+  id: 'GetLanguageId()'
+  so.intellisense: NSLocalizedText.GetLanguageId
+  langs:
+  - crmscript
+  name: 'GetLanguageId()'
+  nameWithType: NSLocalizedText.GetLanguageId()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetLanguageId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLanguageId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Language ID as LCID value
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nInteger languageId = thing.GetLanguageId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
+  id: 'GetLocalizedTextId()'
+  so.intellisense: NSLocalizedText.GetLocalizedTextId
+  langs:
+  - crmscript
+  name: 'GetLocalizedTextId()'
+  nameWithType: NSLocalizedText.GetLocalizedTextId()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetLocalizedTextId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLocalizedTextId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nInteger localizedTextId = thing.GetLocalizedTextId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLocalizedText.GetResourceId()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetResourceId()
+  id: 'GetResourceId()'
+  so.intellisense: NSLocalizedText.GetResourceId
+  langs:
+  - crmscript
+  name: 'GetResourceId()'
+  nameWithType: NSLocalizedText.GetResourceId()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetResourceId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetResourceId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer'
+      description: Resource ID
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nInteger resourceId = thing.GetResourceId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLocalizedText.GetText()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetText()
+  id: 'GetText()'
+  so.intellisense: NSLocalizedText.GetText
+  langs:
+  - crmscript
+  name: 'GetText()'
+  nameWithType: NSLocalizedText.GetText()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetText()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetText()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The text string itself
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nString text = thing.GetText();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLocalizedText.GetType()
+  commentId: M:CRMScript.NetServer.NSLocalizedText.GetType()
+  id: 'GetType()'
+  so.intellisense: NSLocalizedText.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSLocalizedText.GetType()
+  fullName: CRMScript.NetServer.NSLocalizedText.GetType()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Label</li><li>Enum: 2 = Table</li><li>Enum: 3 = Column</li><li>Enum: 4 = ImportField</li><li>Enum: 5 = ImportObject</li><li>Enum: 6 = ImportGUICategory</li><li>Enum: 7 = StartupHints</li><li>Enum: 11 = FunctionRightLabel</li><li>Enum: 12 = FunctionRightDesc</li><li>Enum: 16 = StatusMonitorName</li><li>Enum: 19 = UdefContactLabel</li><li>Enum: 20 = UdefPersonLabel</li><li>Enum: 21 = UdefProjectLabel</li><li>Enum: 22 = UdefSaleLabel</li><li>Enum: 23 = UdefAppointmentLabel</li><li>Enum: 24 = UdefDocumentLabel</li><li>Enum: 41 = PushNotificationText</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetType()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The type of the text string, such as Field label, Udef label.
+  example: 
+  - "\n<pre><code>NSLocalizedText thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
   commentId: M:CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
   id: 'SetIsBuiltIn(Bool)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSLocalizedText.SetIsBuiltIn(Bool)
   fullName: CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
   type: Method
-  summary: "\n1 = this row is populated and maintained by SuperOffice\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsBuiltIn(Bool isBuiltIn)
     parameters:
     - id: isBuiltIn
       type: CRMScript.Global.Bool
-      description: 
+      description: 1 = this row is populated and maintained by SuperOffice
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSLocalizedText.SetLanguageId(Integer)
   fullName: CRMScript.NetServer.NSLocalizedText.SetLanguageId(Integer)
   type: Method
-  summary: "\nLanguage id as LCID value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLanguageId(Integer languageId)
     parameters:
     - id: languageId
       type: CRMScript.Global.Integer
-      description: 
+      description: Language ID as LCID value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSLocalizedText.SetLocalizedTextId(Integer)
   fullName: CRMScript.NetServer.NSLocalizedText.SetLocalizedTextId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLocalizedTextId(Integer localizedTextId)
     parameters:
     - id: localizedTextId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSLocalizedText.SetResourceId(Integer)
   fullName: CRMScript.NetServer.NSLocalizedText.SetResourceId(Integer)
   type: Method
-  summary: "\nResource ID\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResourceId(Integer resourceId)
     parameters:
     - id: resourceId
       type: CRMScript.Global.Integer
-      description: 
+      description: Resource ID
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSLocalizedText.SetText(String)
   fullName: CRMScript.NetServer.NSLocalizedText.SetText(String)
   type: Method
-  summary: "\nThe text string itself\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetText(String text)
     parameters:
     - id: text
       type: CRMScript.Global.String
-      description: 
+      description: The text string itself
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSLocalizedText.SetType(Integer)
   fullName: CRMScript.NetServer.NSLocalizedText.SetType(Integer)
   type: Method
-  summary: "\nThe type of the text string, e.g. Field label, Udef label, etc.\n"
-  remarks: "\n<p>See enum type.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: 
+      description: The type of the text string, such as Field label, Udef label. See enum type.
     return:
       type: CRMScript.Global.Void
   example: 
