--- a/docs/api-reference/CRMScript.NetServer.NSResourceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResourceAgent.yml
@@ -57,7 +57,7 @@ items:
   nameWithType: NSResourceAgent.DeleteResourceSubstitution(String,String)
   fullName: CRMScript.NetServer.NSResourceAgent.DeleteResourceSubstitution(String,String)
   type: Method
-  summary: "\nPermanentely delete a resource substitution for one or more cultures<p></p>\n<ul><li><strong>ResourceName</strong>The name of the resource, without any brackets</li><li><strong>culture</strong>The .NET culture string; if blank, then ALL substitutions for this resource will be dropped</li></ul><pre><code>NSResourceAgent agent;\nString resourceName;\nString culture;\nagent.DeleteResourceSubstitution(resourceName, culture);</code></pre>\n"
+  summary: "\nPermanently delete a resource substitution for one or more cultures<p></p>\n<ul><li><strong>ResourceName</strong>The name of the resource, without any brackets</li><li><strong>culture</strong>The .NET culture string; if blank, then ALL substitutions for this resource will be dropped</li></ul><pre><code>NSResourceAgent agent;\nString resourceName;\nString culture;\nagent.DeleteResourceSubstitution(resourceName, culture);</code></pre>\n"
   remarks: 
   syntax: 
     content: Void DeleteResourceSubstitution(String resourceName, String culture)
