--- a/docs/api-reference/CRMScript.NetServer.NSDiagnosticsAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDiagnosticsAgent.yml
@@ -296,7 +296,7 @@ items:
   fullName: CRMScript.NetServer.NSDiagnosticsAgent.PerformTasksAfterUpgrade()
   type: Method
   summary: "\nAfter upgrading to a new file set, there may be tasks that need to be done. Fpr example, import new TypicalSearches, if present. Tasks performed here need to be idempotent and independent of the actual upgrade jump (what was the previous version). They should complete in a reasonable time, not more than a few minutes maximum.\n"
-  remarks: "\n\n"
+  remarks: ""
   syntax: 
     content: String PerformTasksAfterUpgrade()
     parameters: []
