--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoAttachment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoAttachment.yml
@@ -40,7 +40,7 @@ items:
   nameWithType: NSFieldInfoAttachment.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoAttachment.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDefaultValue()
