--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDate.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSFieldInfoDate.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoDate.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetDefaultValue()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSFieldInfoDate.GetIsDefaultNow()
   fullName: CRMScript.NetServer.NSFieldInfoDate.GetIsDefaultNow()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsDefaultNow()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSFieldInfoDate.SetDefaultValue(DateTime)
   fullName: CRMScript.NetServer.NSFieldInfoDate.SetDefaultValue(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(DateTime defaultValue)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSFieldInfoDate.SetIsDefaultNow(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoDate.SetIsDefaultNow(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsDefaultNow(Bool isDefaultNow)
