--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
@@ -67,7 +67,7 @@ items:
   nameWithType: NSFieldInfoLongText.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDefaultValue()
@@ -87,7 +87,7 @@ items:
   nameWithType: NSFieldInfoLongText.GetIsHtml()
   fullName: CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsHtml()
@@ -107,7 +107,7 @@ items:
   nameWithType: NSFieldInfoLongText.GetNumRows()
   fullName: CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumRows()
@@ -127,7 +127,7 @@ items:
   nameWithType: NSFieldInfoLongText.GetUseTextArea()
   fullName: CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetUseTextArea()
@@ -147,7 +147,7 @@ items:
   nameWithType: NSFieldInfoLongText.SetChoices(String[])
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetChoices(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChoices(String[] choices)
@@ -168,7 +168,7 @@ items:
   nameWithType: NSFieldInfoLongText.SetDefaultValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetDefaultValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(String defaultValue)
@@ -190,7 +190,7 @@ items:
   nameWithType: NSFieldInfoLongText.SetIsHtml(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetIsHtml(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsHtml(Bool isHtml)
@@ -212,7 +212,7 @@ items:
   nameWithType: NSFieldInfoLongText.SetNumRows(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetNumRows(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumRows(Integer numRows)
@@ -234,7 +234,7 @@ items:
   nameWithType: NSFieldInfoLongText.SetUseTextArea(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetUseTextArea(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUseTextArea(Bool useTextArea)
