--- a/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
@@ -78,7 +78,7 @@ items:
   nameWithType: NSFieldMetadata.GetDefaultValue()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetDefaultValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDefaultValue()
@@ -98,7 +98,7 @@ items:
   nameWithType: NSFieldMetadata.GetDisplayDescription()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetDisplayDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayDescription()
@@ -118,7 +118,7 @@ items:
   nameWithType: NSFieldMetadata.GetDisplayName()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetDisplayName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -138,7 +138,7 @@ items:
   nameWithType: NSFieldMetadata.GetFieldKey()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetFieldKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFieldKey()
@@ -178,7 +178,7 @@ items:
   nameWithType: NSFieldMetadata.GetListName()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetListName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetListName()
@@ -198,7 +198,7 @@ items:
   nameWithType: NSFieldMetadata.GetMaxLength()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetMaxLength()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMaxLength()
@@ -218,7 +218,7 @@ items:
   nameWithType: NSFieldMetadata.GetRank()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetRank()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -238,7 +238,7 @@ items:
   nameWithType: NSFieldMetadata.GetShowInSearch()
   fullName: CRMScript.NetServer.NSFieldMetadata.GetShowInSearch()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetShowInSearch()
@@ -258,8 +258,8 @@ items:
   nameWithType: NSFieldMetadata.SetAccess(Integer)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetAccess(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetAccess(Integer access)
     parameters:
@@ -280,7 +280,7 @@ items:
   nameWithType: NSFieldMetadata.SetDefaultValue(String)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetDefaultValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(String defaultValue)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSFieldMetadata.SetDisplayDescription(String)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetDisplayDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayDescription(String displayDescription)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSFieldMetadata.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetDisplayName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSFieldMetadata.SetFieldKey(String)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetFieldKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFieldKey(String fieldKey)
@@ -368,8 +368,8 @@ items:
   nameWithType: NSFieldMetadata.SetFieldType(Integer)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetFieldType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetFieldType(Integer fieldType)
     parameters:
@@ -390,7 +390,7 @@ items:
   nameWithType: NSFieldMetadata.SetListName(String)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetListName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetListName(String listName)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSFieldMetadata.SetMaxLength(Integer)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetMaxLength(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMaxLength(Integer maxLength)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSFieldMetadata.SetRank(Integer)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetRank(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSFieldMetadata.SetShowInSearch(Bool)
   fullName: CRMScript.NetServer.NSFieldMetadata.SetShowInSearch(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShowInSearch(Bool showInSearch)
