--- a/docs/api-reference/CRMScript.NetServer.NSForeignAppEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignAppEntity.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSForeignAppEntity.GetCreatedBy()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetCreatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSAssociate GetCreatedBy()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSForeignAppEntity.GetCreatedDate()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetCreatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetCreatedDate()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSForeignAppEntity.GetForeignAppId()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetForeignAppId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetForeignAppId()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSForeignAppEntity.GetName()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSForeignAppEntity.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetUpdatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSAssociate GetUpdatedBy()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSForeignAppEntity.GetUpdatedDate()
   fullName: CRMScript.NetServer.NSForeignAppEntity.GetUpdatedDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetUpdatedDate()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSForeignAppEntity.SetCreatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetCreatedBy(NSAssociate)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedBy(NSAssociate createdBy)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSForeignAppEntity.SetCreatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetCreatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreatedDate(DateTime createdDate)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSForeignAppEntity.SetDevices(NSForeignDevice[])
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetDevices(NSForeignDevice[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDevices(NSForeignDevice[] devices)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSForeignAppEntity.SetForeignAppId(Integer)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetForeignAppId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetForeignAppId(Integer foreignAppId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSForeignAppEntity.SetName(String)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSForeignAppEntity.SetUpdatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetUpdatedBy(NSAssociate)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(NSAssociate updatedBy)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSForeignAppEntity.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSForeignAppEntity.SetUpdatedDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
