--- a/docs/api-reference/CRMScript.NetServer.NSLanguageInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLanguageInfo.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLanguageInfo.#ctor
   - CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
   - CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
   - CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
@@ -13,7 +14,6 @@ items:
   - CRMScript.NetServer.NSLanguageInfo.GetNativeName()
   - CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
   - CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
-  - CRMScript.NetServer.NSLanguageInfo.#ctor
   - CRMScript.NetServer.NSLanguageInfo.SetEnglishName(String)
   - CRMScript.NetServer.NSLanguageInfo.SetIsBuiltIn(Bool)
   - CRMScript.NetServer.NSLanguageInfo.SetLanguageInfoId(Integer)
@@ -27,139 +27,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
-  id: 'GetEnglishName()'
-  so.intellisense: NSLanguageInfo.GetEnglishName
-  langs:
-  - crmscript
-  name: 'GetEnglishName()'
-  nameWithType: NSLanguageInfo.GetEnglishName()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
-  type: Method
-  summary: "\nEnglish name of this language (Norwegian)\n"
-  remarks: 
-  syntax: 
-    content: String GetEnglishName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nString englishName = thing.GetEnglishName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
-  id: 'GetIsBuiltIn()'
-  so.intellisense: NSLanguageInfo.GetIsBuiltIn
-  langs:
-  - crmscript
-  name: 'GetIsBuiltIn()'
-  nameWithType: NSLanguageInfo.GetIsBuiltIn()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
-  type: Method
-  summary: "\nHas this row been inserted by SuperOffice priming data\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsBuiltIn()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nBool isBuiltIn = thing.GetIsBuiltIn();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
-  id: 'GetLanguageInfoId()'
-  so.intellisense: NSLanguageInfo.GetLanguageInfoId
-  langs:
-  - crmscript
-  name: 'GetLanguageInfoId()'
-  nameWithType: NSLanguageInfo.GetLanguageInfoId()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLanguageInfoId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nInteger languageInfoId = thing.GetLanguageInfoId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetLCID()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetLCID()
-  id: 'GetLCID()'
-  so.intellisense: NSLanguageInfo.GetLCID
-  langs:
-  - crmscript
-  name: 'GetLCID()'
-  nameWithType: NSLanguageInfo.GetLCID()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetLCID()
-  type: Method
-  summary: "\nLanguage/culture id as a numeric .NET code\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLCID()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nInteger lCID = thing.GetLCID();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetNativeName()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetNativeName()
-  id: 'GetNativeName()'
-  so.intellisense: NSLanguageInfo.GetNativeName
-  langs:
-  - crmscript
-  name: 'GetNativeName()'
-  nameWithType: NSLanguageInfo.GetNativeName()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetNativeName()
-  type: Method
-  summary: "\nThe native name of this language (Norsk Bokmål)\n"
-  remarks: 
-  syntax: 
-    content: String GetNativeName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nString nativeName = thing.GetNativeName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
-  id: 'GetThreeLetterISOLanguageName()'
-  so.intellisense: NSLanguageInfo.GetThreeLetterISOLanguageName
-  langs:
-  - crmscript
-  name: 'GetThreeLetterISOLanguageName()'
-  nameWithType: NSLanguageInfo.GetThreeLetterISOLanguageName()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
-  type: Method
-  summary: "\nISO 3-letter abbreviation\n"
-  remarks: 
-  syntax: 
-    content: String GetThreeLetterISOLanguageName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nString threeLetterISOLanguageName = thing.GetThreeLetterISOLanguageName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
-  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
-  id: 'GetTwoLetterISOLanguageName()'
-  so.intellisense: NSLanguageInfo.GetTwoLetterISOLanguageName
-  langs:
-  - crmscript
-  name: 'GetTwoLetterISOLanguageName()'
-  nameWithType: NSLanguageInfo.GetTwoLetterISOLanguageName()
-  fullName: CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
-  type: Method
-  summary: "\nISO 2-letter abbreviation\n"
-  remarks: 
-  syntax: 
-    content: String GetTwoLetterISOLanguageName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLanguageInfo thing;\nString twoLetterISOLanguageName = thing.GetTwoLetterISOLanguageName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLanguageInfo.#ctor
   commentId: M:CRMScript.NetServer.NSLanguageInfo.#ctor
   id: '#ctor'
@@ -175,6 +42,146 @@ items:
   syntax: 
     content: NSLanguageInfo
   example: 
+- uid: CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
+  id: 'GetEnglishName()'
+  so.intellisense: NSLanguageInfo.GetEnglishName
+  langs:
+  - crmscript
+  name: 'GetEnglishName()'
+  nameWithType: NSLanguageInfo.GetEnglishName()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetEnglishName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetEnglishName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: English name of this language (Norwegian)
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nString englishName = thing.GetEnglishName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
+  id: 'GetIsBuiltIn()'
+  so.intellisense: NSLanguageInfo.GetIsBuiltIn
+  langs:
+  - crmscript
+  name: 'GetIsBuiltIn()'
+  nameWithType: NSLanguageInfo.GetIsBuiltIn()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetIsBuiltIn()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsBuiltIn()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Has this row been inserted by SuperOffice priming data?
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nBool isBuiltIn = thing.GetIsBuiltIn();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
+  id: 'GetLanguageInfoId()'
+  so.intellisense: NSLanguageInfo.GetLanguageInfoId
+  langs:
+  - crmscript
+  name: 'GetLanguageInfoId()'
+  nameWithType: NSLanguageInfo.GetLanguageInfoId()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetLanguageInfoId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLanguageInfoId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nInteger languageInfoId = thing.GetLanguageInfoId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetLCID()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetLCID()
+  id: 'GetLCID()'
+  so.intellisense: NSLanguageInfo.GetLCID
+  langs:
+  - crmscript
+  name: 'GetLCID()'
+  nameWithType: NSLanguageInfo.GetLCID()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetLCID()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLCID()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Language/culture ID as a numeric .NET code
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nInteger lCID = thing.GetLCID();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetNativeName()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetNativeName()
+  id: 'GetNativeName()'
+  so.intellisense: NSLanguageInfo.GetNativeName
+  langs:
+  - crmscript
+  name: 'GetNativeName()'
+  nameWithType: NSLanguageInfo.GetNativeName()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetNativeName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetNativeName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The native name of this language (Norsk Bokmål)
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nString nativeName = thing.GetNativeName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
+  id: 'GetThreeLetterISOLanguageName()'
+  so.intellisense: NSLanguageInfo.GetThreeLetterISOLanguageName
+  langs:
+  - crmscript
+  name: 'GetThreeLetterISOLanguageName()'
+  nameWithType: NSLanguageInfo.GetThreeLetterISOLanguageName()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetThreeLetterISOLanguageName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetThreeLetterISOLanguageName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: ISO 3-letter abbreviation
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nString threeLetterISOLanguageName = thing.GetThreeLetterISOLanguageName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
+  commentId: M:CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
+  id: 'GetTwoLetterISOLanguageName()'
+  so.intellisense: NSLanguageInfo.GetTwoLetterISOLanguageName
+  langs:
+  - crmscript
+  name: 'GetTwoLetterISOLanguageName()'
+  nameWithType: NSLanguageInfo.GetTwoLetterISOLanguageName()
+  fullName: CRMScript.NetServer.NSLanguageInfo.GetTwoLetterISOLanguageName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTwoLetterISOLanguageName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: ISO 2-letter abbreviation
+  example: 
+  - "\n<pre><code>NSLanguageInfo thing;\nString twoLetterISOLanguageName = thing.GetTwoLetterISOLanguageName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLanguageInfo.SetEnglishName(String)
   commentId: M:CRMScript.NetServer.NSLanguageInfo.SetEnglishName(String)
   id: 'SetEnglishName(String)'
@@ -185,14 +192,14 @@ items:
   nameWithType: NSLanguageInfo.SetEnglishName(String)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetEnglishName(String)
   type: Method
-  summary: "\nEnglish name of this language (Norwegian)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEnglishName(String englishName)
     parameters:
     - id: englishName
       type: CRMScript.Global.String
-      description: 
+      description: English name of this language (Norwegian)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -207,14 +214,14 @@ items:
   nameWithType: NSLanguageInfo.SetIsBuiltIn(Bool)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetIsBuiltIn(Bool)
   type: Method
-  summary: "\nHas this row been inserted by SuperOffice priming data\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsBuiltIn(Bool isBuiltIn)
     parameters:
     - id: isBuiltIn
       type: CRMScript.Global.Bool
-      description: 
+      description: Has this row been inserted by SuperOffice priming data?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -229,14 +236,14 @@ items:
   nameWithType: NSLanguageInfo.SetLanguageInfoId(Integer)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetLanguageInfoId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLanguageInfoId(Integer languageInfoId)
     parameters:
     - id: languageInfoId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -251,14 +258,14 @@ items:
   nameWithType: NSLanguageInfo.SetLCID(Integer)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetLCID(Integer)
   type: Method
-  summary: "\nLanguage/culture id as a numeric .NET code\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLCID(Integer lCID)
     parameters:
     - id: lCID
       type: CRMScript.Global.Integer
-      description: 
+      description: Language/culture ID as a numeric .NET code
     return:
       type: CRMScript.Global.Void
   example: 
@@ -273,14 +280,14 @@ items:
   nameWithType: NSLanguageInfo.SetNativeName(String)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetNativeName(String)
   type: Method
-  summary: "\nThe native name of this language (Norsk Bokmål)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNativeName(String nativeName)
     parameters:
     - id: nativeName
       type: CRMScript.Global.String
-      description: 
+      description: The native name of this language (Norsk Bokmål)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -295,14 +302,14 @@ items:
   nameWithType: NSLanguageInfo.SetThreeLetterISOLanguageName(String)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetThreeLetterISOLanguageName(String)
   type: Method
-  summary: "\nISO 3-letter abbreviation\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetThreeLetterISOLanguageName(String threeLetterISOLanguageName)
     parameters:
     - id: threeLetterISOLanguageName
       type: CRMScript.Global.String
-      description: 
+      description: ISO 3-letter abbreviation
     return:
       type: CRMScript.Global.Void
   example: 
@@ -317,14 +324,14 @@ items:
   nameWithType: NSLanguageInfo.SetTwoLetterISOLanguageName(String)
   fullName: CRMScript.NetServer.NSLanguageInfo.SetTwoLetterISOLanguageName(String)
   type: Method
-  summary: "\nISO 2-letter abbreviation\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTwoLetterISOLanguageName(String twoLetterISOLanguageName)
     parameters:
     - id: twoLetterISOLanguageName
       type: CRMScript.Global.String
-      description: 
+      description: ISO 2-letter abbreviation
     return:
       type: CRMScript.Global.Void
   example: 
