--- a/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
@@ -6,20 +6,35 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLicenseOwner.#ctor
   - CRMScript.NetServer.NSLicenseOwner.GetDescription()
   - CRMScript.NetServer.NSLicenseOwner.GetName()
   - CRMScript.NetServer.NSLicenseOwner.GetRestrictedModuleLicenses()
   - CRMScript.NetServer.NSLicenseOwner.GetUnrestrictedModuleLicenses()
-  - CRMScript.NetServer.NSLicenseOwner.#ctor
   - CRMScript.NetServer.NSLicenseOwner.SetDescription(String)
   - CRMScript.NetServer.NSLicenseOwner.SetName(String)
-  - CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses()
-  - CRMScript.NetServer.NSLicenseOwner.SetUnrestrictedModuleLicenses()
+  - CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses(NSModuleLicenseLink[])
+  - CRMScript.NetServer.NSLicenseOwner.SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])
   name: NSLicenseOwner
   nameWithType: NSLicenseOwner
   fullName: CRMScript.NetServer.NSLicenseOwner
   type: Class
   summary: 
+  example: 
+- uid: CRMScript.NetServer.NSLicenseOwner.#ctor
+  commentId: M:CRMScript.NetServer.NSLicenseOwner.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSLicenseOwner
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSLicenseOwner.#ctor
+  fullName: CRMScript.NetServer.NSLicenseOwner.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSLicenseOwner
   example: 
 - uid: CRMScript.NetServer.NSLicenseOwner.GetDescription()
   commentId: M:CRMScript.NetServer.NSLicenseOwner.GetDescription()
@@ -50,13 +65,14 @@ items:
   nameWithType: NSLicenseOwner.GetName()
   fullName: CRMScript.NetServer.NSLicenseOwner.GetName()
   type: Method
-  summary: "\nThe name of the license owner\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The name of the license owner
   example: 
   - "\n<pre><code>NSLicenseOwner thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLicenseOwner.GetRestrictedModuleLicenses()
@@ -69,7 +85,7 @@ items:
   nameWithType: NSLicenseOwner.GetRestrictedModuleLicenses()
   fullName: CRMScript.NetServer.NSLicenseOwner.GetRestrictedModuleLicenses()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSModuleLicenseLink[]<p></p>\n<pre><code>NSLicenseOwner thing;\nNSModuleLicenseLink[] restrictedModuleLicenses = thing.GetRestrictedModuleLicenses();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSModuleLicenseLink[] GetRestrictedModuleLicenses()
@@ -88,30 +104,16 @@ items:
   nameWithType: NSLicenseOwner.GetUnrestrictedModuleLicenses()
   fullName: CRMScript.NetServer.NSLicenseOwner.GetUnrestrictedModuleLicenses()
   type: Method
-  summary: "\nThe unrestricted module licenses that this license owner<p></p>\n<strong>Returns:</strong>NSModuleLicenseLink[]<p></p>\n<pre><code>NSLicenseOwner thing;\nNSModuleLicenseLink[] unrestrictedModuleLicenses = thing.GetUnrestrictedModuleLicenses();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSModuleLicenseLink[] GetUnrestrictedModuleLicenses()
     parameters: []
     return:
       type: CRMScript.NetServer.NSModuleLicenseLink[]
+      description: The unrestricted module licenses that this license owner
   example: 
   - "\n<pre><code>NSLicenseOwner thing;\nNSModuleLicenseLink[] unrestrictedModuleLicenses = thing.GetUnrestrictedModuleLicenses();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLicenseOwner.#ctor
-  commentId: M:CRMScript.NetServer.NSLicenseOwner.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSLicenseOwner
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSLicenseOwner.#ctor
-  fullName: CRMScript.NetServer.NSLicenseOwner.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSLicenseOwner
-  example: 
 - uid: CRMScript.NetServer.NSLicenseOwner.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSLicenseOwner.SetDescription(String)
   id: 'SetDescription(String)'
@@ -144,50 +146,60 @@ items:
   nameWithType: NSLicenseOwner.SetName(String)
   fullName: CRMScript.NetServer.NSLicenseOwner.SetName(String)
   type: Method
-  summary: "\nThe name of the license owner\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the license owner
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSLicenseOwner thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses()
-  commentId: M:CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses()
-  id: 'SetRestrictedModuleLicenses()'
+- uid: CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses(NSModuleLicenseLink[])
+  commentId: M:CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses(NSModuleLicenseLink[])
+  id: 'SetRestrictedModuleLicenses(NSModuleLicenseLink[])'
   so.intellisense: NSLicenseOwner.SetRestrictedModuleLicenses
   langs:
   - crmscript
-  name: 'SetRestrictedModuleLicenses()'
-  nameWithType: NSLicenseOwner.SetRestrictedModuleLicenses()
-  fullName: CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses()
+  name: 'SetRestrictedModuleLicenses(NSModuleLicenseLink[])'
+  nameWithType: NSLicenseOwner.SetRestrictedModuleLicenses(NSModuleLicenseLink[])
+  fullName: CRMScript.NetServer.NSLicenseOwner.SetRestrictedModuleLicenses(NSModuleLicenseLink[])
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetRestrictedModuleLicenses(NSModuleLicenseLink[] restrictedModuleLicenses)
     parameters:
+    - id: restrictedModuleLicenses
+      type: CRMScript.NetServer.NSModuleLicenseLink[]
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSLicenseOwner thing;\nNSModuleLicenseLink[] restrictedModuleLicenses;\nthing.SetRestrictedModuleLicenses(restrictedModuleLicenses);</code></pre>\n"
-- uid: CRMScript.NetServer.NSLicenseOwner.SetUnrestrictedModuleLicenses()
-  commentId: M:CRMScript.NetServer.NSLicenseOwner.SetUnrestrictedModuleLicenses()
-  id: 'SetUnrestrictedModuleLicenses()'
+- uid: CRMScript.NetServer.NSLicenseOwner.SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])
+  commentId: M:CRMScript.NetServer.NSLicenseOwner.SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])
+  id: 'SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])'
   so.intellisense: NSLicenseOwner.SetUnrestrictedModuleLicenses
   langs:
   - crmscript
-  name: 'SetUnrestrictedModuleLicenses()'
-  nameWithType: NSLicenseOwner.SetUnrestrictedModuleLicenses()
-  fullName: CRMScript.NetServer.NSLicenseOwner.SetUnrestrictedModuleLicenses()
+  name: 'SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])'
+  nameWithType: NSLicenseOwner.SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])
+  fullName: CRMScript.NetServer.NSLicenseOwner.SetUnRestrictedModuleLicenses(NSModuleLicenseLink[])
   type: Method
-  summary: "\nThe unrestricted module licenses that this license owner\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUnrestrictedModuleLicenses(NSModuleLicenseLink[] unrestrictedModuleLicenses)
     parameters:
+    - id: unrestrictedModuleLicenses
+      type: CRMScript.NetServer.NSModuleLicenseLink[]
+      description: The unrestricted module licenses that this license owner
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSLicenseOwner thing;\nNSModuleLicenseLink[] unrestrictedModuleLicenses;\nthing.SetUnrestrictedModuleLicenses(unrestrictedModuleLicenses);</code></pre>\n"
 references:
