--- a/docs/api-reference/CRMScript.NetServer.NSLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLink.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSLink.#ctor
   - CRMScript.NetServer.NSLink.GetDescription()
   - CRMScript.NetServer.NSLink.GetEntityName()
   - CRMScript.NetServer.NSLink.GetExtraInfo()
   - CRMScript.NetServer.NSLink.GetId()
   - CRMScript.NetServer.NSLink.GetLinkId()
-  - CRMScript.NetServer.NSLink.#ctor
   - CRMScript.NetServer.NSLink.SetDescription(String)
   - CRMScript.NetServer.NSLink.SetEntityName(String)
   - CRMScript.NetServer.NSLink.SetExtraInfo(String)
@@ -23,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSLink.GetDescription()
-  commentId: M:CRMScript.NetServer.NSLink.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSLink.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSLink.GetDescription()
-  fullName: CRMScript.NetServer.NSLink.GetDescription()
-  type: Method
-  summary: "\nLink description.\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLink thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLink.GetEntityName()
-  commentId: M:CRMScript.NetServer.NSLink.GetEntityName()
-  id: 'GetEntityName()'
-  so.intellisense: NSLink.GetEntityName
-  langs:
-  - crmscript
-  name: 'GetEntityName()'
-  nameWithType: NSLink.GetEntityName()
-  fullName: CRMScript.NetServer.NSLink.GetEntityName()
-  type: Method
-  summary: "\nName of the entity the link points to (The destination/target entity)\n"
-  remarks: 
-  syntax: 
-    content: String GetEntityName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLink thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLink.GetExtraInfo()
-  commentId: M:CRMScript.NetServer.NSLink.GetExtraInfo()
-  id: 'GetExtraInfo()'
-  so.intellisense: NSLink.GetExtraInfo
-  langs:
-  - crmscript
-  name: 'GetExtraInfo()'
-  nameWithType: NSLink.GetExtraInfo()
-  fullName: CRMScript.NetServer.NSLink.GetExtraInfo()
-  type: Method
-  summary: "\nExtrainfo for link. Use for information that does not have a primary key\n"
-  remarks: 
-  syntax: 
-    content: String GetExtraInfo()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSLink thing;\nString extraInfo = thing.GetExtraInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLink.GetId()
-  commentId: M:CRMScript.NetServer.NSLink.GetId()
-  id: 'GetId()'
-  so.intellisense: NSLink.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSLink.GetId()
-  fullName: CRMScript.NetServer.NSLink.GetId()
-  type: Method
-  summary: "\nID of the entity the link points to (The destination/target entity primary key)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLink thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSLink.GetLinkId()
-  commentId: M:CRMScript.NetServer.NSLink.GetLinkId()
-  id: 'GetLinkId()'
-  so.intellisense: NSLink.GetLinkId
-  langs:
-  - crmscript
-  name: 'GetLinkId()'
-  nameWithType: NSLink.GetLinkId()
-  fullName: CRMScript.NetServer.NSLink.GetLinkId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLinkId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSLink thing;\nInteger linkId = thing.GetLinkId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLink.#ctor
   commentId: M:CRMScript.NetServer.NSLink.#ctor
   id: '#ctor'
@@ -133,6 +38,106 @@ items:
   syntax: 
     content: NSLink
   example: 
+- uid: CRMScript.NetServer.NSLink.GetDescription()
+  commentId: M:CRMScript.NetServer.NSLink.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSLink.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSLink.GetDescription()
+  fullName: CRMScript.NetServer.NSLink.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Link description.
+  example: 
+  - "\n<pre><code>NSLink thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLink.GetEntityName()
+  commentId: M:CRMScript.NetServer.NSLink.GetEntityName()
+  id: 'GetEntityName()'
+  so.intellisense: NSLink.GetEntityName
+  langs:
+  - crmscript
+  name: 'GetEntityName()'
+  nameWithType: NSLink.GetEntityName()
+  fullName: CRMScript.NetServer.NSLink.GetEntityName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetEntityName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the entity the link points to (The destination/target entity)
+  example: 
+  - "\n<pre><code>NSLink thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLink.GetExtraInfo()
+  commentId: M:CRMScript.NetServer.NSLink.GetExtraInfo()
+  id: 'GetExtraInfo()'
+  so.intellisense: NSLink.GetExtraInfo
+  langs:
+  - crmscript
+  name: 'GetExtraInfo()'
+  nameWithType: NSLink.GetExtraInfo()
+  fullName: CRMScript.NetServer.NSLink.GetExtraInfo()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetExtraInfo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Extrainfo for link. Use for information that does not have a primary key
+  example: 
+  - "\n<pre><code>NSLink thing;\nString extraInfo = thing.GetExtraInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLink.GetId()
+  commentId: M:CRMScript.NetServer.NSLink.GetId()
+  id: 'GetId()'
+  so.intellisense: NSLink.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSLink.GetId()
+  fullName: CRMScript.NetServer.NSLink.GetId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the entity the link points to (The destination/target entity primary key)
+  example: 
+  - "\n<pre><code>NSLink thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSLink.GetLinkId()
+  commentId: M:CRMScript.NetServer.NSLink.GetLinkId()
+  id: 'GetLinkId()'
+  so.intellisense: NSLink.GetLinkId
+  langs:
+  - crmscript
+  name: 'GetLinkId()'
+  nameWithType: NSLink.GetLinkId()
+  fullName: CRMScript.NetServer.NSLink.GetLinkId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLinkId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSLink thing;\nInteger linkId = thing.GetLinkId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLink.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSLink.SetDescription(String)
   id: 'SetDescription(String)'
@@ -143,14 +148,14 @@ items:
   nameWithType: NSLink.SetDescription(String)
   fullName: CRMScript.NetServer.NSLink.SetDescription(String)
   type: Method
-  summary: "\nLink description.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Link description.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -165,14 +170,14 @@ items:
   nameWithType: NSLink.SetEntityName(String)
   fullName: CRMScript.NetServer.NSLink.SetEntityName(String)
   type: Method
-  summary: "\nName of the entity the link points to (The destination/target entity)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEntityName(String entityName)
     parameters:
     - id: entityName
       type: CRMScript.Global.String
-      description: 
+      description: Name of the entity the link points to (The destination/target entity)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -187,14 +192,14 @@ items:
   nameWithType: NSLink.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSLink.SetExtraInfo(String)
   type: Method
-  summary: "\nExtrainfo for link. Use for information that does not have a primary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
     parameters:
     - id: extraInfo
       type: CRMScript.Global.String
-      description: 
+      description: Extrainfo for link. Use for information that does not have a primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -209,14 +214,14 @@ items:
   nameWithType: NSLink.SetId(Integer)
   fullName: CRMScript.NetServer.NSLink.SetId(Integer)
   type: Method
-  summary: "\nID of the entity the link points to (The destination/target entity primary key)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the entity the link points to (The destination/target entity primary key)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -231,14 +236,14 @@ items:
   nameWithType: NSLink.SetLinkId(Integer)
   fullName: CRMScript.NetServer.NSLink.SetLinkId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLinkId(Integer linkId)
     parameters:
     - id: linkId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
