--- a/docs/api-reference/CRMScript.NetServer.NSListItemEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListItemEntity.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSListItemEntity.#ctor
   - CRMScript.NetServer.NSListItemEntity.GetDeleted()
   - CRMScript.NetServer.NSListItemEntity.GetId()
   - CRMScript.NetServer.NSListItemEntity.GetName()
   - CRMScript.NetServer.NSListItemEntity.GetRank()
   - CRMScript.NetServer.NSListItemEntity.GetTooltip()
   - CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
-  - CRMScript.NetServer.NSListItemEntity.#ctor
   - CRMScript.NetServer.NSListItemEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSListItemEntity.SetId(Integer)
   - CRMScript.NetServer.NSListItemEntity.SetName(String)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSListItemEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSListItemEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSListItemEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetDeleted()
-  type: Method
-  summary: "\nTrue if the list item is marked as deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItemEntity.GetId()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetId()
-  id: 'GetId()'
-  so.intellisense: NSListItemEntity.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSListItemEntity.GetId()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetId()
-  type: Method
-  summary: "\nThe identity of the list item\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItemEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSListItemEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSListItemEntity.GetName()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetName()
-  type: Method
-  summary: "\nThe name of the list item\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItemEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSListItemEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSListItemEntity.GetRank()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetRank()
-  type: Method
-  summary: "\nThe rank of the list item\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItemEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSListItemEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSListItemEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetTooltip()
-  type: Method
-  summary: "\nThe tooltip of the list item\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
-  commentId: M:CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
-  id: 'GetUdListDefinitionId()'
-  so.intellisense: NSListItemEntity.GetUdListDefinitionId
-  langs:
-  - crmscript
-  name: 'GetUdListDefinitionId()'
-  nameWithType: NSListItemEntity.GetUdListDefinitionId()
-  fullName: CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
-  type: Method
-  summary: "\nThe ID of the list which this list item belongs to\n"
-  remarks: 
-  syntax: 
-    content: Integer GetUdListDefinitionId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSListItemEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListItemEntity.#ctor
   commentId: M:CRMScript.NetServer.NSListItemEntity.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSListItemEntity
   example: 
+- uid: CRMScript.NetServer.NSListItemEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSListItemEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSListItemEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if the list item is marked as deleted
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItemEntity.GetId()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetId()
+  id: 'GetId()'
+  so.intellisense: NSListItemEntity.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSListItemEntity.GetId()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The identity of the list item
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItemEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSListItemEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSListItemEntity.GetName()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the list item
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItemEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSListItemEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSListItemEntity.GetRank()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The rank of the list item
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItemEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSListItemEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSListItemEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip of the list item
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
+  commentId: M:CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
+  id: 'GetUdListDefinitionId()'
+  so.intellisense: NSListItemEntity.GetUdListDefinitionId
+  langs:
+  - crmscript
+  name: 'GetUdListDefinitionId()'
+  nameWithType: NSListItemEntity.GetUdListDefinitionId()
+  fullName: CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetUdListDefinitionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the list which this list item belongs to
+  example: 
+  - "\n<pre><code>NSListItemEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListItemEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSListItemEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSListItemEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSListItemEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nTrue if the list item is marked as deleted\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the list item is marked as deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSListItemEntity.SetId(Integer)
   fullName: CRMScript.NetServer.NSListItemEntity.SetId(Integer)
   type: Method
-  summary: "\nThe identity of the list item\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: The identity of the list item
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSListItemEntity.SetName(String)
   fullName: CRMScript.NetServer.NSListItemEntity.SetName(String)
   type: Method
-  summary: "\nThe name of the list item\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the list item
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSListItemEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSListItemEntity.SetRank(Integer)
   type: Method
-  summary: "\nThe rank of the list item\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: The rank of the list item
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSListItemEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSListItemEntity.SetTooltip(String)
   type: Method
-  summary: "\nThe tooltip of the list item\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip of the list item
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSListItemEntity.SetUdListDefinitionId(Integer)
   fullName: CRMScript.NetServer.NSListItemEntity.SetUdListDefinitionId(Integer)
   type: Method
-  summary: "\nThe ID of the list which this list item belongs to\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUdListDefinitionId(Integer udListDefinitionId)
     parameters:
     - id: udListDefinitionId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the list which this list item belongs to
     return:
       type: CRMScript.Global.Void
   example: 
